MessageRefactor sweep: countries and languages now use their ISO standard short forms.

--- a/portal/src/main/resources/i18n/messages_az.properties
+++ b/portal/src/main/resources/i18n/messages_az.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=İtalyan dili
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Avstriya
+_locale.AZ=Azerbaijan
+_locale.BE=Belçika
+_locale.BG=Bolqarıstan
+_locale.CH=İsveçrə
+_locale.CY=Kipr
+_locale.CZ=Çex Respublikası
+_locale.DE=Almaniya
+_locale.EE=Estoniya
+_locale.ES=İspaniya
+_locale.FI=Finlandiya
+_locale.FR=Fransa
+_locale.GB=Birləşmiş Krallıq
+_locale.GE=Georgia
+_locale.GR=Yunanıstan
+_locale.HR=Xorvatiya
+_locale.HU=Macarıstan
+_locale.IE=İrlandiya
+_locale.IS=İslandiya
+_locale.IT.florence=İtaliya-Florensiya
+_locale.IT.rome=İtaliya-Roma
+_locale.LI=Lixtenşteyn
+_locale.LT=Litva
+_locale.LU=Lüksemburq
+_locale.LV=Latviya
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Niderland
+_locale.NO=Norveç
+_locale.PL=Polşa
+_locale.PT=Portuqaliya
+_locale.RO=Rumıniya
+_locale.RS=Serbiya
+_locale.RU.moscow=Rusiya - Moskva
+_locale.RU.st.petersburg=Russia - Saint Petersburg
+_locale.SE=İsveç
+_locale.SK=Slovakiya
+_locale.TR=Turkey
+_locale.UA=Ukraine
+_locale.cs=Çex dili
+_locale.da=Danimarka
+_locale.danish=Danimarka dili
+_locale.de=Alman dili
+_locale.el=Yunan dili
+_locale.en=İngilis(ing)
+_locale.es=İspan dili
+_locale.et=Eston dili
+_locale.fi=Fin dili
+_locale.fr=Fransız dili
+_locale.hr=Xorvat dili
+_locale.hu=Macar dili
+_locale.is=İsland dili
+_locale.lb=Lüksemburq dili
+_locale.lt=Litva dili
+_locale.lv=Latiş dili
+_locale.mt=Malta dili
+_locale.nl=Niderland dili
+_locale.norwegian=Norveç dili
+_locale.pl=Polyak dili
+_locale.pt=Portuqal dili
+_locale.ro=Rumın dili
+_locale.ru=Rus dili
+_locale.sk=Slovak dili
+_locale.sl=Slavyan dili
+_locale.sr=Serb dili
+_locale.sv=İsveç dili
 _metadata.dc.contributor=İanəçi
 _metadata.dc.coverage=Sərhəd
 _metadata.dc.creator=Müəllif
@@ -205,72 +273,4 @@ _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
 languageDropDownList_t=Dil
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Avstriya
-locale.azerbaijan=Azerbaijan
-locale.belgium=Belçika
-locale.bulgaria=Bolqarıstan
-locale.croatia=Xorvatiya
-locale.croatian=Xorvat dili
-locale.cyprus=Kipr
-locale.czech=Çex Respublikası
-locale.czechlanguage=Çex dili
-locale.danish=Danimarka dili
-locale.denmark=Danimarka
-locale.dutch=Niderland dili
-locale.english=İngilis(ing)
-locale.estonia=Estoniya
-locale.estonian=Eston dili
-locale.finland=Finlandiya
-locale.finnish=Fin dili
-locale.france=Fransa
-locale.french=Fransız dili
-locale.georgia=Georgia
-locale.german=Alman dili
-locale.germany=Almaniya
-locale.greece=Yunanıstan
-locale.greek=Yunan dili
-locale.hungarian=Macar dili
-locale.hungary=Macarıstan
-locale.iceland=İslandiya
-locale.icelandic=İsland dili
-locale.ireland=İrlandiya
-locale.italy.florence=İtaliya-Florensiya
-locale.italy.rome=İtaliya-Roma
-locale.latvia=Latviya
-locale.latvian=Latiş dili
-locale.liechtenstein=Lixtenşteyn
-locale.lithuania=Litva
-locale.lithuanian=Litva dili
-locale.luxembourg=Lüksemburq
-locale.luxemburgish=Lüksemburq dili
-locale.malta=Malta
-locale.maltese=Malta dili
-locale.moldova=Moldova
-locale.netherlands=Niderland
-locale.norway=Norveç
-locale.norwegian=Norveç dili
-locale.poland=Polşa
-locale.polish=Polyak dili
-locale.portugal=Portuqaliya
-locale.portuguese=Portuqal dili
-locale.romania=Rumıniya
-locale.romanian=Rumın dili
-locale.russia.moscow=Rusiya - Moskva
-locale.russia.st.petersburg=Russia - Saint Petersburg
-locale.russian=Rus dili
-locale.serbia=Serbiya
-locale.serbian=Serb dili
-locale.slovak=Slovak dili
-locale.slovakia=Slovakiya
-locale.slovenian=Slavyan dili
-locale.spain=İspaniya
-locale.spanish=İspan dili
-locale.sweden=İsveç
-locale.swedish=İsveç dili
-locale.switzerland=İsveçrə
-locale.turkey=Turkey
-locale.uk=Birləşmiş Krallıq
-locale.ukraine=Ukraine
 registrationSucceed_t=Siz uğurla qeydiyyatdan keçdiniz
