--- a/portal/src/main/resources/i18n/messages_bg.properties
+++ b/portal/src/main/resources/i18n/messages_bg.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Търсенето не можа да се запише
 _header.actions=Действия
 _header.relatedcontent=Подобно съдържание
 _language_select.italian=Италиански
+_locale.AL=Албания
+_locale.AM=Армения
+_locale.AT=Австрия
+_locale.AZ=Азербайджан
+_locale.BE=Белгия
+_locale.BG=България
+_locale.CH=Швейцария
+_locale.CY=Кипър
+_locale.CZ=Чехска Република
+_locale.DE=Германия
+_locale.EE=Естония
+_locale.ES=Испания
+_locale.FI=Финландия
+_locale.FR=Франция
+_locale.GB=Великобритания
+_locale.GE=Грузия
+_locale.GR=Гърция
+_locale.HR=Хърватска
+_locale.HU=Унгария
+_locale.IE=Ирландия
+_locale.IS=Исландия
+_locale.IT.florence=Италия-Флоренция
+_locale.IT.rome=Италия-Рим
+_locale.LI=Лихтенщайн
+_locale.LT=Литва
+_locale.LU=Люксембург
+_locale.LV=Латвия
+_locale.MD=Молдова
+_locale.MT=Малта
+_locale.NL=Холандия
+_locale.NO=Норвегия
+_locale.PL=Полша
+_locale.PT=Португалия
+_locale.RO=Румъния
+_locale.RS=Сърбия
+_locale.RU.moscow=Русия - Москва
+_locale.RU.st.petersburg=Русия - Санкт Петербург
+_locale.SE=Швеция
+_locale.SK=Словакия
+_locale.TR=Турция
+_locale.UA=Украйна
+_locale.cs=Чехски
+_locale.da=Дания
+_locale.danish=Датски
+_locale.de=Немски
+_locale.el=Гръцки
+_locale.en=Английски
+_locale.es=Испански
+_locale.et=Естонски
+_locale.fi=Финландски
+_locale.fr=Френски
+_locale.hr=Хърватски
+_locale.hu=Унгарски
+_locale.is=Исландски
+_locale.lb=Люксембургски
+_locale.lt=Литовски
+_locale.lv=Латвийски
+_locale.mt=Малтийски
+_locale.nl=Холандски
+_locale.norwegian=Норвежки
+_locale.pl=Полски
+_locale.pt=Португалски
+_locale.ro=Румънски
+_locale.ru=Руски
+_locale.sk=Словашки
+_locale.sl=Словенски
+_locale.sr=Сръбски
+_locale.sv=Шведски
 _metadata.dc.contributor=Участник
 _metadata.dc.coverage=Обсег
 _metadata.dc.creator=Автор
@@ -205,72 +273,4 @@ _unused.view.with.labels=Виж с етикетите
 _unused.view.without.labels=Виж без етикетите
 _unused.you.have.search.for=Вие търсехте...
 languageDropDownList_t=Език
-locale.albania=Албания
-locale.armenia=Армения
-locale.austria=Австрия
-locale.azerbaijan=Азербайджан
-locale.belgium=Белгия
-locale.bulgaria=България
-locale.croatia=Хърватска
-locale.croatian=Хърватски
-locale.cyprus=Кипър
-locale.czech=Чехска Република
-locale.czechlanguage=Чехски
-locale.danish=Датски
-locale.denmark=Дания
-locale.dutch=Холандски
-locale.english=Английски
-locale.estonia=Естония
-locale.estonian=Естонски
-locale.finland=Финландия
-locale.finnish=Финландски
-locale.france=Франция
-locale.french=Френски
-locale.georgia=Грузия
-locale.german=Немски
-locale.germany=Германия
-locale.greece=Гърция
-locale.greek=Гръцки
-locale.hungarian=Унгарски
-locale.hungary=Унгария
-locale.iceland=Исландия
-locale.icelandic=Исландски
-locale.ireland=Ирландия
-locale.italy.florence=Италия-Флоренция
-locale.italy.rome=Италия-Рим
-locale.latvia=Латвия
-locale.latvian=Латвийски
-locale.liechtenstein=Лихтенщайн
-locale.lithuania=Литва
-locale.lithuanian=Литовски
-locale.luxembourg=Люксембург
-locale.luxemburgish=Люксембургски
-locale.malta=Малта
-locale.maltese=Малтийски
-locale.moldova=Молдова
-locale.netherlands=Холандия
-locale.norway=Норвегия
-locale.norwegian=Норвежки
-locale.poland=Полша
-locale.polish=Полски
-locale.portugal=Португалия
-locale.portuguese=Португалски
-locale.romania=Румъния
-locale.romanian=Румънски
-locale.russia.moscow=Русия - Москва
-locale.russia.st.petersburg=Русия - Санкт Петербург
-locale.russian=Руски
-locale.serbia=Сърбия
-locale.serbian=Сръбски
-locale.slovak=Словашки
-locale.slovakia=Словакия
-locale.slovenian=Словенски
-locale.spain=Испания
-locale.spanish=Испански
-locale.sweden=Швеция
-locale.swedish=Шведски
-locale.switzerland=Швейцария
-locale.turkey=Турция
-locale.uk=Великобритания
-locale.ukraine=Украйна
 registrationSucceed_t=Регистрирахте се успешно
