--- a/portal/src/main/resources/i18n/messages_bs.properties
+++ b/portal/src/main/resources/i18n/messages_bs.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=Italijanski (ita)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Austrija
+_locale.AZ=Azerbaijan
+_locale.BE=Belgija
+_locale.BG=Bugarska
+_locale.CH=Švicarska
+_locale.CY=Kipar
+_locale.CZ=Češka Republika
+_locale.DE=Njemačka
+_locale.EE=Estonija
+_locale.ES=Španija
+_locale.FI=Finska
+_locale.FR=Francuska
+_locale.GB=Ujedinjeno Kraljevstvo
+_locale.GE=Georgia
+_locale.GR=Grčka
+_locale.HR=Hrvatska
+_locale.HU=Mađarska
+_locale.IE=Irska
+_locale.IS=Island
+_locale.IT.florence=Italija-Firenca
+_locale.IT.rome=Italija-Rim
+_locale.LI=Lihtenštajn
+_locale.LT=Litvanija
+_locale.LU=Luksemburg
+_locale.LV=Latvija
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Nizozemska
+_locale.NO=Norveška
+_locale.PL=Poljska
+_locale.PT=Portugal
+_locale.RO=Rumunija
+_locale.RS=Srbija
+_locale.RU.moscow=Rusija - Moskva
+_locale.RU.st.petersburg=Russia - Saint Petersburg
+_locale.SE=Švedska
+_locale.SK=Slovačka
+_locale.TR=Turkey
+_locale.UA=Ukraine
+_locale.cs=Češki (cze/cse)
+_locale.da=Danska
+_locale.danish=Danski (dan)
+_locale.de=Njemački (deu)
+_locale.el=Grčki (ell/gre)
+_locale.en=Engleski (eng)
+_locale.es=Španski (esp)
+_locale.et=Estonski (est)
+_locale.fi=Finski (fin)
+_locale.fr=Francuski (fre)
+_locale.hr=Hrvatski (hrv)
+_locale.hu=Mađarski (hun)
+_locale.is=Islandski (ice)
+_locale.lb=Luksemburški (ltz)
+_locale.lt=Litvanski (lit)
+_locale.lv=Letonski (lav)
+_locale.mt=Malteški (mlt)
+_locale.nl=Holandski (dut)
+_locale.norwegian=NMorveški (nor)
+_locale.pl=Poljski (pol)
+_locale.pt=Portugalski (por)
+_locale.ro=Rumunski (rom)
+_locale.ru=Ruski (rus)
+_locale.sk=Slovački (slo)
+_locale.sl=Slovenački (slv)
+_locale.sr=Srpski (scc)
+_locale.sv=Švedski (sve/swe)
 _metadata.dc.contributor=Saradnik
 _metadata.dc.coverage=Obuhvat
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
 languageDropDownList_t=Jezik
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Austrija
-locale.azerbaijan=Azerbaijan
-locale.belgium=Belgija
-locale.bulgaria=Bugarska
-locale.croatia=Hrvatska
-locale.croatian=Hrvatski (hrv)
-locale.cyprus=Kipar
-locale.czech=Češka Republika
-locale.czechlanguage=Češki (cze/cse)
-locale.danish=Danski (dan)
-locale.denmark=Danska
-locale.dutch=Holandski (dut)
-locale.english=Engleski (eng)
-locale.estonia=Estonija
-locale.estonian=Estonski (est)
-locale.finland=Finska
-locale.finnish=Finski (fin)
-locale.france=Francuska
-locale.french=Francuski (fre)
-locale.georgia=Georgia
-locale.german=Njemački (deu)
-locale.germany=Njemačka
-locale.greece=Grčka
-locale.greek=Grčki (ell/gre)
-locale.hungarian=Mađarski (hun)
-locale.hungary=Mađarska
-locale.iceland=Island
-locale.icelandic=Islandski (ice)
-locale.ireland=Irska
-locale.italy.florence=Italija-Firenca
-locale.italy.rome=Italija-Rim
-locale.latvia=Latvija
-locale.latvian=Letonski (lav)
-locale.liechtenstein=Lihtenštajn
-locale.lithuania=Litvanija
-locale.lithuanian=Litvanski (lit)
-locale.luxembourg=Luksemburg
-locale.luxemburgish=Luksemburški (ltz)
-locale.malta=Malta
-locale.maltese=Malteški (mlt)
-locale.moldova=Moldova
-locale.netherlands=Nizozemska
-locale.norway=Norveška
-locale.norwegian=NMorveški (nor)
-locale.poland=Poljska
-locale.polish=Poljski (pol)
-locale.portugal=Portugal
-locale.portuguese=Portugalski (por)
-locale.romania=Rumunija
-locale.romanian=Rumunski (rom)
-locale.russia.moscow=Rusija - Moskva
-locale.russia.st.petersburg=Russia - Saint Petersburg
-locale.russian=Ruski (rus)
-locale.serbia=Srbija
-locale.serbian=Srpski (scc)
-locale.slovak=Slovački (slo)
-locale.slovakia=Slovačka
-locale.slovenian=Slovenački (slv)
-locale.spain=Španija
-locale.spanish=Španski (esp)
-locale.sweden=Švedska
-locale.swedish=Švedski (sve/swe)
-locale.switzerland=Švicarska
-locale.turkey=Turkey
-locale.uk=Ujedinjeno Kraljevstvo
-locale.ukraine=Ukraine
 registrationSucceed_t=Uspješno ste se registrovali
