--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Guardar la cerca ha fallat
 _header.actions=Accions
 _header.relatedcontent=Contingut relacionat
 _language_select.italian=Italià
+_locale.AL=Albània
+_locale.AM=Armènia
+_locale.AT=Àustria
+_locale.AZ=Azerbaidjan
+_locale.BE=Bèlgica
+_locale.BG=Bulgària
+_locale.CH=Suïssa
+_locale.CY=Xipre
+_locale.CZ=República Txeca
+_locale.DE=Alemanya
+_locale.EE=Estònia
+_locale.ES=Espanya
+_locale.FI=Finlàndia
+_locale.FR=França
+_locale.GB=Regne Unit
+_locale.GE=Georgia
+_locale.GR=Grècia
+_locale.HR=Croàcia
+_locale.HU=Hongria
+_locale.IE=Irlanda
+_locale.IS=Islàndia
+_locale.IT.florence=Itàlia-Florència
+_locale.IT.rome=Itàlia-Roma
+_locale.LI=Liechtenstein
+_locale.LT=Lituània
+_locale.LU=Luxemburg
+_locale.LV=Letònia
+_locale.MD=Moldàvia
+_locale.MT=Malta
+_locale.NL=Països Baixos
+_locale.NO=Noruega
+_locale.PL=Polònia
+_locale.PT=Portugal
+_locale.RO=Romania
+_locale.RS=Sèrbia
+_locale.RU.moscow=Rússia-Moscú
+_locale.RU.st.petersburg=Rússia-Sant Petersburg
+_locale.SE=Suècia
+_locale.SK=Eslovàquia
+_locale.TR=Turquia
+_locale.UA=Ucraïna
+_locale.cs=Txec
+_locale.da=Dinamarca
+_locale.danish=Danès
+_locale.de=Alemany
+_locale.el=Grec
+_locale.en=Anglès
+_locale.es=Espanyol
+_locale.et=Estonià
+_locale.fi=Finès
+_locale.fr=Francès
+_locale.hr=Croat
+_locale.hu=Hongarès
+_locale.is=Islandès
+_locale.lb=Luxemburguès
+_locale.lt=Lituà
+_locale.lv=Letó
+_locale.mt=Maltès
+_locale.nl=Neerlandès
+_locale.norwegian=Norueg
+_locale.pl=Polonès
+_locale.pt=Portuguès
+_locale.ro=Romanès
+_locale.ru=Rus
+_locale.sk=Eslovac
+_locale.sl=Eslovè
+_locale.sr=Serbi
+_locale.sv=Suec
 _metadata.dc.contributor=Contribuïdor
 _metadata.dc.coverage=Abast
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Visualització amb etiquetes
 _unused.view.without.labels=Visualització sense etiquetes
 _unused.you.have.search.for=Heu cercat
 languageDropDownList_t=Llengua
-locale.albania=Albània
-locale.armenia=Armènia
-locale.austria=Àustria
-locale.azerbaijan=Azerbaidjan
-locale.belgium=Bèlgica
-locale.bulgaria=Bulgària
-locale.croatia=Croàcia
-locale.croatian=Croat
-locale.cyprus=Xipre
-locale.czech=República Txeca
-locale.czechlanguage=Txec
-locale.danish=Danès
-locale.denmark=Dinamarca
-locale.dutch=Neerlandès
-locale.english=Anglès
-locale.estonia=Estònia
-locale.estonian=Estonià
-locale.finland=Finlàndia
-locale.finnish=Finès
-locale.france=França
-locale.french=Francès
-locale.georgia=Georgia
-locale.german=Alemany
-locale.germany=Alemanya
-locale.greece=Grècia
-locale.greek=Grec
-locale.hungarian=Hongarès
-locale.hungary=Hongria
-locale.iceland=Islàndia
-locale.icelandic=Islandès
-locale.ireland=Irlanda
-locale.italy.florence=Itàlia-Florència
-locale.italy.rome=Itàlia-Roma
-locale.latvia=Letònia
-locale.latvian=Letó
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Lituània
-locale.lithuanian=Lituà
-locale.luxembourg=Luxemburg
-locale.luxemburgish=Luxemburguès
-locale.malta=Malta
-locale.maltese=Maltès
-locale.moldova=Moldàvia
-locale.netherlands=Països Baixos
-locale.norway=Noruega
-locale.norwegian=Norueg
-locale.poland=Polònia
-locale.polish=Polonès
-locale.portugal=Portugal
-locale.portuguese=Portuguès
-locale.romania=Romania
-locale.romanian=Romanès
-locale.russia.moscow=Rússia-Moscú
-locale.russia.st.petersburg=Rússia-Sant Petersburg
-locale.russian=Rus
-locale.serbia=Sèrbia
-locale.serbian=Serbi
-locale.slovak=Eslovac
-locale.slovakia=Eslovàquia
-locale.slovenian=Eslovè
-locale.spain=Espanya
-locale.spanish=Espanyol
-locale.sweden=Suècia
-locale.swedish=Suec
-locale.switzerland=Suïssa
-locale.turkey=Turquia
-locale.uk=Regne Unit
-locale.ukraine=Ucraïna
 registrationSucceed_t=Us heu registrat amb èxit
