--- a/portal/src/main/resources/i18n/messages_cs.properties
+++ b/portal/src/main/resources/i18n/messages_cs.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Chyba ukládání výsledků vyhledávání
 _header.actions=Výběr akcí
 _header.relatedcontent=Příbuzný obsah
 _language_select.italian=Italština (ita)
+_locale.AL=Albánie
+_locale.AM=Arménie
+_locale.AT=Rakousko
+_locale.AZ=Azerbajdžán
+_locale.BE=Belgie
+_locale.BG=Bulharsko
+_locale.CH=Švýcarsko
+_locale.CY=Kypr
+_locale.CZ=Česká republika
+_locale.DE=Německo
+_locale.EE=Estonsko
+_locale.ES=Španělsko
+_locale.FI=Finsko
+_locale.FR=Francie
+_locale.GB=Velká Británie
+_locale.GE=Gruzie
+_locale.GR=Řecko
+_locale.HR=Chorvatsko
+_locale.HU=Maďarsko
+_locale.IE=Irsko
+_locale.IS=Island
+_locale.IT.florence=Itálie - Florencie
+_locale.IT.rome=Itálie - Řím
+_locale.LI=Lichtenštejnsko
+_locale.LT=Litva
+_locale.LU=Lucembursko
+_locale.LV=Lotyšsko
+_locale.MD=Moldávie
+_locale.MT=Malta
+_locale.NL=Nizozemsko
+_locale.NO=Norsko
+_locale.PL=Polsko
+_locale.PT=Portugalsko
+_locale.RO=Rumunsko
+_locale.RS=Srbsko
+_locale.RU.moscow=Rusko - Moskva
+_locale.RU.st.petersburg=Rusko - Petrohrad
+_locale.SE=Švédsko
+_locale.SK=Slovensko
+_locale.TR=Turecko
+_locale.UA=Ukrajina
+_locale.cs=Čeština (cze/cse)
+_locale.da=Dánsko
+_locale.danish=Dánština (dan)
+_locale.de=Němčina (deu)
+_locale.el=Řečtina (ell/gre)
+_locale.en=Angličtina (eng)
+_locale.es=Španělština (esp)
+_locale.et=Estonština (est)
+_locale.fi=Finština (fin)
+_locale.fr=Francouzština (fre)
+_locale.hr=Chorvatština (hrv)
+_locale.hu=Maďarština (hun)
+_locale.is=Islandština (ice)
+_locale.lb=lucemburština (ltz)
+_locale.lt=Litevština (lit)
+_locale.lv=Lotyština (lav)
+_locale.mt=maltština (mlt)
+_locale.nl=Nizozemština (dut)
+_locale.norwegian=norština (nor)
+_locale.pl=Polština (pol)
+_locale.pt=Portugalština (por)
+_locale.ro=Rumunština (rum)
+_locale.ru=Ruština (rus)
+_locale.sk=Slovenština (slo)
+_locale.sl=Slovinština (slv)
+_locale.sr=Srbština (scc)
+_locale.sv=Švédština (sve/swe)
 _metadata.dc.contributor=Přispěvatel
 _metadata.dc.coverage=Pokrytí
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Zobraz s popisky
 _unused.view.without.labels=Zobraz bez popisků
 _unused.you.have.search.for=Hledal/a jsi
 languageDropDownList_t=Jazyk
-locale.albania=Albánie
-locale.armenia=Arménie
-locale.austria=Rakousko
-locale.azerbaijan=Azerbajdžán
-locale.belgium=Belgie
-locale.bulgaria=Bulharsko
-locale.croatia=Chorvatsko
-locale.croatian=Chorvatština (hrv)
-locale.cyprus=Kypr
-locale.czech=Česká republika
-locale.czechlanguage=Čeština (cze/cse)
-locale.danish=Dánština (dan)
-locale.denmark=Dánsko
-locale.dutch=Nizozemština (dut)
-locale.english=Angličtina (eng)
-locale.estonia=Estonsko
-locale.estonian=Estonština (est)
-locale.finland=Finsko
-locale.finnish=Finština (fin)
-locale.france=Francie
-locale.french=Francouzština (fre)
-locale.georgia=Gruzie
-locale.german=Němčina (deu)
-locale.germany=Německo
-locale.greece=Řecko
-locale.greek=Řečtina (ell/gre)
-locale.hungarian=Maďarština (hun)
-locale.hungary=Maďarsko
-locale.iceland=Island
-locale.icelandic=Islandština (ice)
-locale.ireland=Irsko
-locale.italy.florence=Itálie - Florencie
-locale.italy.rome=Itálie - Řím
-locale.latvia=Lotyšsko
-locale.latvian=Lotyština (lav)
-locale.liechtenstein=Lichtenštejnsko
-locale.lithuania=Litva
-locale.lithuanian=Litevština (lit)
-locale.luxembourg=Lucembursko
-locale.luxemburgish=lucemburština (ltz)
-locale.malta=Malta
-locale.maltese=maltština (mlt)
-locale.moldova=Moldávie
-locale.netherlands=Nizozemsko
-locale.norway=Norsko
-locale.norwegian=norština (nor)
-locale.poland=Polsko
-locale.polish=Polština (pol)
-locale.portugal=Portugalsko
-locale.portuguese=Portugalština (por)
-locale.romania=Rumunsko
-locale.romanian=Rumunština (rum)
-locale.russia.moscow=Rusko - Moskva
-locale.russia.st.petersburg=Rusko - Petrohrad
-locale.russian=Ruština (rus)
-locale.serbia=Srbsko
-locale.serbian=Srbština (scc)
-locale.slovak=Slovenština (slo)
-locale.slovakia=Slovensko
-locale.slovenian=Slovinština (slv)
-locale.spain=Španělsko
-locale.spanish=Španělština (esp)
-locale.sweden=Švédsko
-locale.swedish=Švédština (sve/swe)
-locale.switzerland=Švýcarsko
-locale.turkey=Turecko
-locale.uk=Velká Británie
-locale.ukraine=Ukrajina
 registrationSucceed_t=Registrace proběhla úspěšně
