--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Speichern der Suche fehlgeschlagen
 _header.actions=Aktionen
 _header.relatedcontent=Ähnlicher Inhalt
 _language_select.italian=italienisch
+_locale.AL=Albanien
+_locale.AM=Armenien
+_locale.AT=Österreich
+_locale.AZ=Aserbaidschan
+_locale.BE=Belgien
+_locale.BG=Bulgarien
+_locale.CH=Schweiz
+_locale.CY=Zypern
+_locale.CZ=Tschechische Republik
+_locale.DE=Deutschland
+_locale.EE=Estland
+_locale.ES=Spanien
+_locale.FI=Finnland
+_locale.FR=Frankreich
+_locale.GB=Großbritannien
+_locale.GE=Georgien
+_locale.GR=Griechenland
+_locale.HR=Kroatien
+_locale.HU=Ungarn
+_locale.IE=Irland
+_locale.IS=Island
+_locale.IT.florence=Italien-Florenz
+_locale.IT.rome=Italien-Rom
+_locale.LI=Liechtenstein
+_locale.LT=Litauen
+_locale.LU=Luxemburg
+_locale.LV=Lettland
+_locale.MD=Moldau
+_locale.MT=Malta
+_locale.NL=Niederlande
+_locale.NO=Norwegen
+_locale.PL=Polen
+_locale.PT=Portugal
+_locale.RO=Rumänien
+_locale.RS=Serbien
+_locale.RU.moscow=Russland - Moskau
+_locale.RU.st.petersburg=Russland - St. Petersburg
+_locale.SE=Schweden
+_locale.SK=Slowakei
+_locale.TR=Türkei
+_locale.UA=Ukraine
+_locale.cs=tschechisch
+_locale.da=Dänemark
+_locale.danish=dänisch
+_locale.de=deutsch
+_locale.el=griechisch
+_locale.en=englisch
+_locale.es=spanisch
+_locale.et=estnisch
+_locale.fi=finnisch
+_locale.fr=französisch
+_locale.hr=kroatisch
+_locale.hu=ungarisch
+_locale.is=isländisch
+_locale.lb=luxemburgisch
+_locale.lt=litauisch
+_locale.lv=lettisch
+_locale.mt=maltesisch
+_locale.nl=niederländisch
+_locale.norwegian=norwegisch
+_locale.pl=polnisch
+_locale.pt=portugiesisch
+_locale.ro=rumänisch
+_locale.ru=russisch
+_locale.sk=slowakisch
+_locale.sl=slowenisch
+_locale.sr=serbisch
+_locale.sv=schwedisch
 _metadata.dc.contributor=Weitere beteiligte Person
 _metadata.dc.coverage=Umfang
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Mit Labels ansehen
 _unused.view.without.labels=Ohne Labels ansehen
 _unused.you.have.search.for=Sie haben nach...gesucht
 languageDropDownList_t=Sprache
-locale.albania=Albanien
-locale.armenia=Armenien
-locale.austria=Österreich
-locale.azerbaijan=Aserbaidschan
-locale.belgium=Belgien
-locale.bulgaria=Bulgarien
-locale.croatia=Kroatien
-locale.croatian=kroatisch
-locale.cyprus=Zypern
-locale.czech=Tschechische Republik
-locale.czechlanguage=tschechisch
-locale.danish=dänisch
-locale.denmark=Dänemark
-locale.dutch=niederländisch
-locale.english=englisch
-locale.estonia=Estland
-locale.estonian=estnisch
-locale.finland=Finnland
-locale.finnish=finnisch
-locale.france=Frankreich
-locale.french=französisch
-locale.georgia=Georgien
-locale.german=deutsch
-locale.germany=Deutschland
-locale.greece=Griechenland
-locale.greek=griechisch
-locale.hungarian=ungarisch
-locale.hungary=Ungarn
-locale.iceland=Island
-locale.icelandic=isländisch
-locale.ireland=Irland
-locale.italy.florence=Italien-Florenz
-locale.italy.rome=Italien-Rom
-locale.latvia=Lettland
-locale.latvian=lettisch
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Litauen
-locale.lithuanian=litauisch
-locale.luxembourg=Luxemburg
-locale.luxemburgish=luxemburgisch
-locale.malta=Malta
-locale.maltese=maltesisch
-locale.moldova=Moldau
-locale.netherlands=Niederlande
-locale.norway=Norwegen
-locale.norwegian=norwegisch
-locale.poland=Polen
-locale.polish=polnisch
-locale.portugal=Portugal
-locale.portuguese=portugiesisch
-locale.romania=Rumänien
-locale.romanian=rumänisch
-locale.russia.moscow=Russland - Moskau
-locale.russia.st.petersburg=Russland - St. Petersburg
-locale.russian=russisch
-locale.serbia=Serbien
-locale.serbian=serbisch
-locale.slovak=slowakisch
-locale.slovakia=Slowakei
-locale.slovenian=slowenisch
-locale.spain=Spanien
-locale.spanish=spanisch
-locale.sweden=Schweden
-locale.swedish=schwedisch
-locale.switzerland=Schweiz
-locale.turkey=Türkei
-locale.uk=Großbritannien
-locale.ukraine=Ukraine
 registrationSucceed_t=Sie haben sich erfolgreich registriert.
