--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Fallo en la grabación de la búsqueda
 _header.actions=Acciones
 _header.relatedcontent=Contenido relacionado
 _language_select.italian=Italiano (ita)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Austria
+_locale.AZ=Azerbaiyán
+_locale.BE=Bélgica
+_locale.BG=Bulgaria
+_locale.CH=Suiza
+_locale.CY=Chipre
+_locale.CZ=República Checa
+_locale.DE=Alemania
+_locale.EE=Estonia
+_locale.ES=España
+_locale.FI=Finlandia
+_locale.FR=Francia
+_locale.GB=Reino Unido
+_locale.GE=Georgia
+_locale.GR=Grecia
+_locale.HR=Croacia
+_locale.HU=Hungría
+_locale.IE=Irlanda
+_locale.IS=Islandia
+_locale.IT.florence=Italia-Florencia
+_locale.IT.rome=Italia-Roma
+_locale.LI=Liechtenstein
+_locale.LT=Lituania
+_locale.LU=Luxembourg
+_locale.LV=Letonia
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Holanda
+_locale.NO=Noruega
+_locale.PL=Polonia
+_locale.PT=Portugal
+_locale.RO=Rumanía
+_locale.RS=Serbia
+_locale.RU.moscow=Rusia - Moscú
+_locale.RU.st.petersburg=Rusia - San Petesburgo
+_locale.SE=Suecia
+_locale.SK=Eslovaquia
+_locale.TR=Turquía
+_locale.UA=Ucrania
+_locale.cs=Checo (cze/cse)
+_locale.da=Dinamarca
+_locale.danish=Danés (dan)
+_locale.de=Alemán (deu)
+_locale.el=Griego (ell/gre)
+_locale.en=Inglés (eng)
+_locale.es=Español
+_locale.et=Estonio (est)
+_locale.fi=Finés (fin)
+_locale.fr=Francés (fre)
+_locale.hr=Croacia (hrv)
+_locale.hu=Húngaro (hun)
+_locale.is=Islandés (ice)
+_locale.lb=Luxemburgués (ltz)
+_locale.lt=Lituano (lit)
+_locale.lv=Letón (lav)
+_locale.mt=Maltés (mlt)
+_locale.nl=Holandés (dut)
+_locale.norwegian=Noruego (nor)
+_locale.pl=Polaco (pol)
+_locale.pt=Portugués (por)
+_locale.ro=Rumano
+_locale.ru=Ruso
+_locale.sk=Eslovaco (slo)
+_locale.sl=Esloveno (slv)
+_locale.sr=Serbio (scc)
+_locale.sv=Sueco (sve/swe)
 _metadata.dc.contributor=Colaborador
 _metadata.dc.coverage=Cobertura
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Vista con etiqueta
 _unused.view.without.labels=Vista sin etiquetas
 _unused.you.have.search.for=Usted ha buscado por
 languageDropDownList_t=Lengua
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Austria
-locale.azerbaijan=Azerbaiyán
-locale.belgium=Bélgica
-locale.bulgaria=Bulgaria
-locale.croatia=Croacia
-locale.croatian=Croacia (hrv)
-locale.cyprus=Chipre
-locale.czech=República Checa
-locale.czechlanguage=Checo (cze/cse)
-locale.danish=Danés (dan)
-locale.denmark=Dinamarca
-locale.dutch=Holandés (dut)
-locale.english=Inglés (eng)
-locale.estonia=Estonia
-locale.estonian=Estonio (est)
-locale.finland=Finlandia
-locale.finnish=Finés (fin)
-locale.france=Francia
-locale.french=Francés (fre)
-locale.georgia=Georgia
-locale.german=Alemán (deu)
-locale.germany=Alemania
-locale.greece=Grecia
-locale.greek=Griego (ell/gre)
-locale.hungarian=Húngaro (hun)
-locale.hungary=Hungría
-locale.iceland=Islandia
-locale.icelandic=Islandés (ice)
-locale.ireland=Irlanda
-locale.italy.florence=Italia-Florencia
-locale.italy.rome=Italia-Roma
-locale.latvia=Letonia
-locale.latvian=Letón (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Lituania
-locale.lithuanian=Lituano (lit)
-locale.luxembourg=Luxembourg
-locale.luxemburgish=Luxemburgués (ltz)
-locale.malta=Malta
-locale.maltese=Maltés (mlt)
-locale.moldova=Moldova
-locale.netherlands=Holanda
-locale.norway=Noruega
-locale.norwegian=Noruego (nor)
-locale.poland=Polonia
-locale.polish=Polaco (pol)
-locale.portugal=Portugal
-locale.portuguese=Portugués (por)
-locale.romania=Rumanía
-locale.romanian=Rumano
-locale.russia.moscow=Rusia - Moscú
-locale.russia.st.petersburg=Rusia - San Petesburgo
-locale.russian=Ruso
-locale.serbia=Serbia
-locale.serbian=Serbio (scc)
-locale.slovak=Eslovaco (slo)
-locale.slovakia=Eslovaquia
-locale.slovenian=Esloveno (slv)
-locale.spain=España
-locale.spanish=Español
-locale.sweden=Suecia
-locale.swedish=Sueco (sve/swe)
-locale.switzerland=Suiza
-locale.turkey=Turquía
-locale.uk=Reino Unido
-locale.ukraine=Ucrania
 registrationSucceed_t=Se ha registrado corecctamente
