--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Päringu salvestamine ebaõnnestus
 _header.actions=Tegevused
 _header.relatedcontent=Sarnased objektid
 _language_select.italian=itaalia (ita)
+_locale.AL=Albaania
+_locale.AM=Armeenia
+_locale.AT=Austria
+_locale.AZ=Aserbaidžaan
+_locale.BE=Belgia
+_locale.BG=Bulgaaria
+_locale.CH=Šveits
+_locale.CY=Küpros
+_locale.CZ=Tšehhi
+_locale.DE=Saksamaa
+_locale.EE=Eesti
+_locale.ES=Hispaania
+_locale.FI=Soome
+_locale.FR=Prantsusmaa
+_locale.GB=Suurbritannia
+_locale.GE=Gruusia
+_locale.GR=Kreeka
+_locale.HR=Horvaatia
+_locale.HU=Ungari
+_locale.IE=Iirimaa
+_locale.IS=Island
+_locale.IT.florence=Itaalia-Firenze
+_locale.IT.rome=Itaalia-Rooma
+_locale.LI=Liechtenstein
+_locale.LT=Leedu
+_locale.LU=Luksemburg
+_locale.LV=Läti
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Holland
+_locale.NO=Norra
+_locale.PL=Poola
+_locale.PT=Portugal
+_locale.RO=Rumeenia
+_locale.RS=Serbia
+_locale.RU.moscow=Venemaa - Moskva
+_locale.RU.st.petersburg=Venemaa - Peterburi
+_locale.SE=Rootsi
+_locale.SK=Slovakkia
+_locale.TR=Türgi
+_locale.UA=Ukraina
+_locale.cs=tšehhi (cze/cse)
+_locale.da=Taani
+_locale.danish=taani (dan)
+_locale.de=saksa (deu)
+_locale.el=kreeka (ell/gre)
+_locale.en=inglise (eng)
+_locale.es=hispaania (esp)
+_locale.et=eesti (est)
+_locale.fi=soome (fin)
+_locale.fr=prantsuse (fre)
+_locale.hr=horvaadi (hrv)
+_locale.hu=ungari (hun)
+_locale.is=islandi (ice)
+_locale.lb=letseburgi (ltz)
+_locale.lt=leedu (lit)
+_locale.lv=läti (lav)
+_locale.mt=malta (mlt)
+_locale.nl=hollandi (dut)
+_locale.norwegian=norra (nor)
+_locale.pl=poola (pol)
+_locale.pt=portugali (por)
+_locale.ro=rumeenia (rom)
+_locale.ru=vene (rus)
+_locale.sk=slovaki (slo)
+_locale.sl=sloveeni (slv)
+_locale.sr=serbia (scc)
+_locale.sv=rootsi (sve/swe)
 _metadata.dc.contributor=Kaasautor
 _metadata.dc.coverage=Hõlme
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Vaata koos siltidega
 _unused.view.without.labels=Vaata ilma siltideta
 _unused.you.have.search.for=Otsiti
 languageDropDownList_t=Keel
-locale.albania=Albaania
-locale.armenia=Armeenia
-locale.austria=Austria
-locale.azerbaijan=Aserbaidžaan
-locale.belgium=Belgia
-locale.bulgaria=Bulgaaria
-locale.croatia=Horvaatia
-locale.croatian=horvaadi (hrv)
-locale.cyprus=Küpros
-locale.czech=Tšehhi
-locale.czechlanguage=tšehhi (cze/cse)
-locale.danish=taani (dan)
-locale.denmark=Taani
-locale.dutch=hollandi (dut)
-locale.english=inglise (eng)
-locale.estonia=Eesti
-locale.estonian=eesti (est)
-locale.finland=Soome
-locale.finnish=soome (fin)
-locale.france=Prantsusmaa
-locale.french=prantsuse (fre)
-locale.georgia=Gruusia
-locale.german=saksa (deu)
-locale.germany=Saksamaa
-locale.greece=Kreeka
-locale.greek=kreeka (ell/gre)
-locale.hungarian=ungari (hun)
-locale.hungary=Ungari
-locale.iceland=Island
-locale.icelandic=islandi (ice)
-locale.ireland=Iirimaa
-locale.italy.florence=Itaalia-Firenze
-locale.italy.rome=Itaalia-Rooma
-locale.latvia=Läti
-locale.latvian=läti (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Leedu
-locale.lithuanian=leedu (lit)
-locale.luxembourg=Luksemburg
-locale.luxemburgish=letseburgi (ltz)
-locale.malta=Malta
-locale.maltese=malta (mlt)
-locale.moldova=Moldova
-locale.netherlands=Holland
-locale.norway=Norra
-locale.norwegian=norra (nor)
-locale.poland=Poola
-locale.polish=poola (pol)
-locale.portugal=Portugal
-locale.portuguese=portugali (por)
-locale.romania=Rumeenia
-locale.romanian=rumeenia (rom)
-locale.russia.moscow=Venemaa - Moskva
-locale.russia.st.petersburg=Venemaa - Peterburi
-locale.russian=vene (rus)
-locale.serbia=Serbia
-locale.serbian=serbia (scc)
-locale.slovak=slovaki (slo)
-locale.slovakia=Slovakkia
-locale.slovenian=sloveeni (slv)
-locale.spain=Hispaania
-locale.spanish=hispaania (esp)
-locale.sweden=Rootsi
-locale.swedish=rootsi (sve/swe)
-locale.switzerland=Šveits
-locale.turkey=Türgi
-locale.uk=Suurbritannia
-locale.ukraine=Ukraina
 registrationSucceed_t=Registreerumine õnnestus
