--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Haun tallentaminen epäonnistui
 _header.actions=Tapahtumat
 _header.relatedcontent=Tähän liittyvä sisältö
 _language_select.italian=italia (ita)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Itävalta
+_locale.AZ=Azerbaidzan
+_locale.BE=Belgia
+_locale.BG=Bulgaria
+_locale.CH=Sveitsi
+_locale.CY=Kypros
+_locale.CZ=Tsekin tasavalta
+_locale.DE=Saksa
+_locale.EE=Viro
+_locale.ES=Espanja
+_locale.FI=Suomi
+_locale.FR=Ranska
+_locale.GB=Britannia
+_locale.GE=Georgia
+_locale.GR=Kreikka
+_locale.HR=Kroatia
+_locale.HU=Unkari
+_locale.IE=Irlanti
+_locale.IS=Islanti
+_locale.IT.florence=Italia-Firenze
+_locale.IT.rome=Italia-Rooma
+_locale.LI=Liechtenstein
+_locale.LT=Liettua
+_locale.LU=Luxemburg
+_locale.LV=Latvia
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Alankomaat
+_locale.NO=Norja
+_locale.PL=Puola
+_locale.PT=Portugali
+_locale.RO=Romania
+_locale.RS=Serbia
+_locale.RU.moscow=Venäjä - Moskova
+_locale.RU.st.petersburg=Venäjä - Pietari
+_locale.SE=Ruotsi
+_locale.SK=Slovakia
+_locale.TR=Turkki
+_locale.UA=Ukraina
+_locale.cs=tsekki (cze/cse)
+_locale.da=Tanska
+_locale.danish=tanska (dan)
+_locale.de=saksa (deu)
+_locale.el=kreikka (ell/gre)
+_locale.en=englanti (eng)
+_locale.es=espanja (esp)
+_locale.et=viro (est)
+_locale.fi=suomi (fin)
+_locale.fr=ranska (fre)
+_locale.hr=kroatia (hrv)
+_locale.hu=unkari (hun)
+_locale.is=islanti (ice)
+_locale.lb=luxemburg (ltz)
+_locale.lt=liettua (lit)
+_locale.lv=Latvia (lav)
+_locale.mt=malta (mlt)
+_locale.nl=hollanti (dut)
+_locale.norwegian=norja (nor)
+_locale.pl=puola (pol)
+_locale.pt=portugali (por)
+_locale.ro=Romania (rom)
+_locale.ru=Venäjä (rus)
+_locale.sk=slovakia (slo)
+_locale.sl=slovenia (slv)
+_locale.sr=serbia (scc)
+_locale.sv=ruotsi (sve/swe)
 _metadata.dc.contributor=Muu tekijä
 _metadata.dc.coverage=Kattavuus
 _metadata.dc.creator=Tekijä
@@ -205,72 +273,4 @@ _unused.view.with.labels=Otsikkonäyttö
 _unused.view.without.labels=Näyttö ilman otsikkoja
 _unused.you.have.search.for=Olet tehnyt haun:
 languageDropDownList_t=Kieli
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Itävalta
-locale.azerbaijan=Azerbaidzan
-locale.belgium=Belgia
-locale.bulgaria=Bulgaria
-locale.croatia=Kroatia
-locale.croatian=kroatia (hrv)
-locale.cyprus=Kypros
-locale.czech=Tsekin tasavalta
-locale.czechlanguage=tsekki (cze/cse)
-locale.danish=tanska (dan)
-locale.denmark=Tanska
-locale.dutch=hollanti (dut)
-locale.english=englanti (eng)
-locale.estonia=Viro
-locale.estonian=viro (est)
-locale.finland=Suomi
-locale.finnish=suomi (fin)
-locale.france=Ranska
-locale.french=ranska (fre)
-locale.georgia=Georgia
-locale.german=saksa (deu)
-locale.germany=Saksa
-locale.greece=Kreikka
-locale.greek=kreikka (ell/gre)
-locale.hungarian=unkari (hun)
-locale.hungary=Unkari
-locale.iceland=Islanti
-locale.icelandic=islanti (ice)
-locale.ireland=Irlanti
-locale.italy.florence=Italia-Firenze
-locale.italy.rome=Italia-Rooma
-locale.latvia=Latvia
-locale.latvian=Latvia (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Liettua
-locale.lithuanian=liettua (lit)
-locale.luxembourg=Luxemburg
-locale.luxemburgish=luxemburg (ltz)
-locale.malta=Malta
-locale.maltese=malta (mlt)
-locale.moldova=Moldova
-locale.netherlands=Alankomaat
-locale.norway=Norja
-locale.norwegian=norja (nor)
-locale.poland=Puola
-locale.polish=puola (pol)
-locale.portugal=Portugali
-locale.portuguese=portugali (por)
-locale.romania=Romania
-locale.romanian=Romania (rom)
-locale.russia.moscow=Venäjä - Moskova
-locale.russia.st.petersburg=Venäjä - Pietari
-locale.russian=Venäjä (rus)
-locale.serbia=Serbia
-locale.serbian=serbia (scc)
-locale.slovak=slovakia (slo)
-locale.slovakia=Slovakia
-locale.slovenian=slovenia (slv)
-locale.spain=Espanja
-locale.spanish=espanja (esp)
-locale.sweden=Ruotsi
-locale.swedish=ruotsi (sve/swe)
-locale.switzerland=Sveitsi
-locale.turkey=Turkki
-locale.uk=Britannia
-locale.ukraine=Ukraina
 registrationSucceed_t=Rekisteröitymisesi onnistui
