--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Sauvegarde de la recherche échouée
 _header.actions=Actions
 _header.relatedcontent=Contenu en relation
 _language_select.italian=Italien (ita)
+_locale.AL=Albanie
+_locale.AM=Arménie
+_locale.AT=Autriche
+_locale.AZ=Azerbaïdjan
+_locale.BE=Belgique
+_locale.BG=Bulgarie
+_locale.CH=Suisse
+_locale.CY=Chypre
+_locale.CZ=République tchèque
+_locale.DE=Allemagne
+_locale.EE=Estonie
+_locale.ES=Espagne
+_locale.FI=Finlande
+_locale.FR=France
+_locale.GB=Royaume-Uni
+_locale.GE=Géorgie
+_locale.GR=Grèce
+_locale.HR=Croatie
+_locale.HU=Hongrie
+_locale.IE=Irlande
+_locale.IS=Islande
+_locale.IT.florence=Italie-Florence
+_locale.IT.rome=Italie-Rome
+_locale.LI=Lichenstein
+_locale.LT=Lituanie
+_locale.LU=Luxembourg
+_locale.LV=Lettonie
+_locale.MD=Moldavie
+_locale.MT=Malte
+_locale.NL=Pays-Bas
+_locale.NO=Norvège
+_locale.PL=Pologne
+_locale.PT=Portugal
+_locale.RO=Roumanie
+_locale.RS=Serbie
+_locale.RU.moscow=Russie - Moscou
+_locale.RU.st.petersburg=Russie-Saint Petersbourg
+_locale.SE=Suède
+_locale.SK=Slovaquie
+_locale.TR=Turquie
+_locale.UA=Ukraine
+_locale.cs=Tchèque (cze/cse)
+_locale.da=Danemark
+_locale.danish=Danois (dan)
+_locale.de=Allemand (deu)
+_locale.el=Grec (ell/gre)
+_locale.en=Anglais (eng)
+_locale.es=Espagnol (esp)
+_locale.et=Estonien (est)
+_locale.fi=Finlandais (fin)
+_locale.fr=Français (fre)
+_locale.hr=Croate (hrv)
+_locale.hu=Hongrois (hun)
+_locale.is=Islandais (ice)
+_locale.lb=Luxembourgeois (ltz)
+_locale.lt=Lituanien (lit)
+_locale.lv=Letton (lav)
+_locale.mt=Maltais (mlt)
+_locale.nl=Néerlandais(dut)
+_locale.norwegian=Norvégien (nor)
+_locale.pl=Polonais (pol)
+_locale.pt=Portugais (por)
+_locale.ro=Roumain
+_locale.ru=Russe
+_locale.sk=Slovaque (slo)
+_locale.sl=Slovène (slv)
+_locale.sr=Serbe (scc)
+_locale.sv=Suédois (sve/swe)
 _metadata.dc.contributor=Contributeur
 _metadata.dc.coverage=Couverture
 _metadata.dc.creator=Auteur
@@ -205,72 +273,4 @@ _unused.view.with.labels=Voir avec les labels
 _unused.view.without.labels=Voir sans les labels
 _unused.you.have.search.for=Vous avez recherché sur
 languageDropDownList_t=Langue
-locale.albania=Albanie
-locale.armenia=Arménie
-locale.austria=Autriche
-locale.azerbaijan=Azerbaïdjan
-locale.belgium=Belgique
-locale.bulgaria=Bulgarie
-locale.croatia=Croatie
-locale.croatian=Croate (hrv)
-locale.cyprus=Chypre
-locale.czech=République tchèque
-locale.czechlanguage=Tchèque (cze/cse)
-locale.danish=Danois (dan)
-locale.denmark=Danemark
-locale.dutch=Néerlandais(dut)
-locale.english=Anglais (eng)
-locale.estonia=Estonie
-locale.estonian=Estonien (est)
-locale.finland=Finlande
-locale.finnish=Finlandais (fin)
-locale.france=France
-locale.french=Français (fre)
-locale.georgia=Géorgie
-locale.german=Allemand (deu)
-locale.germany=Allemagne
-locale.greece=Grèce
-locale.greek=Grec (ell/gre)
-locale.hungarian=Hongrois (hun)
-locale.hungary=Hongrie
-locale.iceland=Islande
-locale.icelandic=Islandais (ice)
-locale.ireland=Irlande
-locale.italy.florence=Italie-Florence
-locale.italy.rome=Italie-Rome
-locale.latvia=Lettonie
-locale.latvian=Letton (lav)
-locale.liechtenstein=Lichenstein
-locale.lithuania=Lituanie
-locale.lithuanian=Lituanien (lit)
-locale.luxembourg=Luxembourg
-locale.luxemburgish=Luxembourgeois (ltz)
-locale.malta=Malte
-locale.maltese=Maltais (mlt)
-locale.moldova=Moldavie
-locale.netherlands=Pays-Bas
-locale.norway=Norvège
-locale.norwegian=Norvégien (nor)
-locale.poland=Pologne
-locale.polish=Polonais (pol)
-locale.portugal=Portugal
-locale.portuguese=Portugais (por)
-locale.romania=Roumanie
-locale.romanian=Roumain
-locale.russia.moscow=Russie - Moscou
-locale.russia.st.petersburg=Russie-Saint Petersbourg
-locale.russian=Russe
-locale.serbia=Serbie
-locale.serbian=Serbe (scc)
-locale.slovak=Slovaque (slo)
-locale.slovakia=Slovaquie
-locale.slovenian=Slovène (slv)
-locale.spain=Espagne
-locale.spanish=Espagnol (esp)
-locale.sweden=Suède
-locale.swedish=Suédois (sve/swe)
-locale.switzerland=Suisse
-locale.turkey=Turquie
-locale.uk=Royaume-Uni
-locale.ukraine=Ukraine
 registrationSucceed_t=Vous êtes enregistré avec succès
