--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Sábháil cuardach teipthe
 _header.actions=Gníomhartha
 _header.relatedcontent=Ábhar gaolmhar
 _language_select.italian=Iodáilis (ita)
+_locale.AL=An Albáin
+_locale.AM=An Airméin
+_locale.AT=An Ostair
+_locale.AZ=An Asarbaiseáin
+_locale.BE=An Bheilg
+_locale.BG=An Bhulgáir
+_locale.CH=An Eilvéis
+_locale.CY=An Chipir
+_locale.CZ=Poblacht na Seice
+_locale.DE=An Ghearmáin
+_locale.EE=An Eastóin
+_locale.ES=An Spáinn
+_locale.FI=An Fhionlainn
+_locale.FR=An Fhrainc
+_locale.GB=An Ríocht Aontaithe
+_locale.GE=An tSeoirsia
+_locale.GR=An Ghréig
+_locale.HR=An Chróit
+_locale.HU=An Ungáir
+_locale.IE=Éire
+_locale.IS=An Íoslainn
+_locale.IT.florence=An Iodáil-Flórans
+_locale.IT.rome=An Iodáil-An Róimh
+_locale.LI=Lichtinstéin
+_locale.LT=An Liotuáin
+_locale.LU=Lucsamburg
+_locale.LV=An Laitvia
+_locale.MD=An Mholdóiv
+_locale.MT=Málta
+_locale.NL=An Ísiltír
+_locale.NO=An Iorua
+_locale.PL=An Pholainn
+_locale.PT=An Phortaingéil
+_locale.RO=An Rómáin
+_locale.RS=An tSeirbia
+_locale.RU.moscow=An Rúis-Moscó
+_locale.RU.st.petersburg=An Rúis-Cathair Pheadair
+_locale.SE=An tSualainn
+_locale.SK=An tSlóvaic
+_locale.TR=An Tuirc
+_locale.UA=An Úcráin
+_locale.cs=Seicis (cze/cse)
+_locale.da=An Danmhairg
+_locale.danish=Danmhairgis(dan)
+_locale.de=Gearmáinis (deu)
+_locale.el=Gréigis(ell/gre)
+_locale.en=Béarla (eng)
+_locale.es=Spáinnis (esp)
+_locale.et=Eastóinis(est)
+_locale.fi=Fionlainnis(fin)
+_locale.fr=Fraincis(fre)
+_locale.hr=Cróitis (hrv)
+_locale.hu=Ungáiris (hun)
+_locale.is=Mórlainnis (ice)
+_locale.lb=Lucsambuirgis (ltz)
+_locale.lt=Liotuáinis (lit)
+_locale.lv=Laitvis (lav)
+_locale.mt=Máltais (mlt)
+_locale.nl=Ollainnis(dut)
+_locale.norwegian=Ioruais (nor)
+_locale.pl=Polainnis (pol)
+_locale.pt=Portaingéilis (por)
+_locale.ro=Rómáinis (rom)
+_locale.ru=Rúisis (rus)
+_locale.sk=Slóvaicis (slo)
+_locale.sl=Slóivéinis (slv)
+_locale.sr=Seirbis (scc)
+_locale.sv=Sualainnis (sve/swe)
 _metadata.dc.contributor=Rannpháirtí
 _metadata.dc.coverage=Clúdach
 _metadata.dc.creator=Údar
@@ -205,72 +273,4 @@ _unused.view.with.labels=Amharc le lipéid
 _unused.view.without.labels=Amharc gan lipéidd
 _unused.you.have.search.for=Chuardaigh tú
 languageDropDownList_t=Teanga
-locale.albania=An Albáin
-locale.armenia=An Airméin
-locale.austria=An Ostair
-locale.azerbaijan=An Asarbaiseáin
-locale.belgium=An Bheilg
-locale.bulgaria=An Bhulgáir
-locale.croatia=An Chróit
-locale.croatian=Cróitis (hrv)
-locale.cyprus=An Chipir
-locale.czech=Poblacht na Seice
-locale.czechlanguage=Seicis (cze/cse)
-locale.danish=Danmhairgis(dan)
-locale.denmark=An Danmhairg
-locale.dutch=Ollainnis(dut)
-locale.english=Béarla (eng)
-locale.estonia=An Eastóin
-locale.estonian=Eastóinis(est)
-locale.finland=An Fhionlainn
-locale.finnish=Fionlainnis(fin)
-locale.france=An Fhrainc
-locale.french=Fraincis(fre)
-locale.georgia=An tSeoirsia
-locale.german=Gearmáinis (deu)
-locale.germany=An Ghearmáin
-locale.greece=An Ghréig
-locale.greek=Gréigis(ell/gre)
-locale.hungarian=Ungáiris (hun)
-locale.hungary=An Ungáir
-locale.iceland=An Íoslainn
-locale.icelandic=Mórlainnis (ice)
-locale.ireland=Éire
-locale.italy.florence=An Iodáil-Flórans
-locale.italy.rome=An Iodáil-An Róimh
-locale.latvia=An Laitvia
-locale.latvian=Laitvis (lav)
-locale.liechtenstein=Lichtinstéin
-locale.lithuania=An Liotuáin
-locale.lithuanian=Liotuáinis (lit)
-locale.luxembourg=Lucsamburg
-locale.luxemburgish=Lucsambuirgis (ltz)
-locale.malta=Málta
-locale.maltese=Máltais (mlt)
-locale.moldova=An Mholdóiv
-locale.netherlands=An Ísiltír
-locale.norway=An Iorua
-locale.norwegian=Ioruais (nor)
-locale.poland=An Pholainn
-locale.polish=Polainnis (pol)
-locale.portugal=An Phortaingéil
-locale.portuguese=Portaingéilis (por)
-locale.romania=An Rómáin
-locale.romanian=Rómáinis (rom)
-locale.russia.moscow=An Rúis-Moscó
-locale.russia.st.petersburg=An Rúis-Cathair Pheadair
-locale.russian=Rúisis (rus)
-locale.serbia=An tSeirbia
-locale.serbian=Seirbis (scc)
-locale.slovak=Slóvaicis (slo)
-locale.slovakia=An tSlóvaic
-locale.slovenian=Slóivéinis (slv)
-locale.spain=An Spáinn
-locale.spanish=Spáinnis (esp)
-locale.sweden=An tSualainn
-locale.swedish=Sualainnis (sve/swe)
-locale.switzerland=An Eilvéis
-locale.turkey=An Tuirc
-locale.uk=An Ríocht Aontaithe
-locale.ukraine=An Úcráin
 registrationSucceed_t=D'éirigh leat tú féin a chlárú
