--- a/portal/src/main/resources/i18n/messages_hr.properties
+++ b/portal/src/main/resources/i18n/messages_hr.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=talijanski (ita)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Austrija
+_locale.AZ=Azerbaijan
+_locale.BE=Belgija
+_locale.BG=Bulgaria
+_locale.CH=Švicarska
+_locale.CY=Cipar
+_locale.CZ=Republika Češka
+_locale.DE=Njemačka
+_locale.EE=Estonija
+_locale.ES=Španjolska
+_locale.FI=Finska
+_locale.FR=Francuska
+_locale.GB=Ujedinjeno Kraljevstvo
+_locale.GE=Georgia
+_locale.GR=Grčka
+_locale.HR=Hrvatska
+_locale.HU=Madžarska
+_locale.IE=Irska
+_locale.IS=Island
+_locale.IT.florence=Italija - Firenca
+_locale.IT.rome=Italija - Rim
+_locale.LI=Lihtenštajn
+_locale.LT=Litva
+_locale.LU=Luksemburg
+_locale.LV=Latvija
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Nizozemska
+_locale.NO=Norveška
+_locale.PL=Poljska
+_locale.PT=Portugal
+_locale.RO=Romania
+_locale.RS=Srbija
+_locale.RU.moscow=Russia - Moscow
+_locale.RU.st.petersburg=Russia - Saint Petersburg
+_locale.SE=Švedska
+_locale.SK=Slovačka
+_locale.TR=Turkey
+_locale.UA=Ukraine
+_locale.cs=češki (cze/cse)
+_locale.da=Danska
+_locale.danish=danski (dan)
+_locale.de=njemački (deu)
+_locale.el=grčki (ell/gre)
+_locale.en=engleski (eng)
+_locale.es=španjolski (esp)
+_locale.et=estonski (est)
+_locale.fi=finski (fin)
+_locale.fr=francuski (fre)
+_locale.hr=hrvatski (hrv)
+_locale.hu=madžarski (hun)
+_locale.is=islandski (ice)
+_locale.lb=Luxemburgish (ltz)
+_locale.lt=litvanski (lit)
+_locale.lv=latvijski (lav)
+_locale.mt=Maltese (mlt)
+_locale.nl=holandski (dut)
+_locale.norwegian=Norwegian (nor)
+_locale.pl=Polish (pol)
+_locale.pt=portugalski (por)
+_locale.ro=Romanian (rom)
+_locale.ru=Russian (rus)
+_locale.sk=slovački (slo)
+_locale.sl=slovenski (slv)
+_locale.sr=srpski (scc)
+_locale.sv=švedski (sve/swe)
 _metadata.dc.contributor=Suradnik
 _metadata.dc.coverage=Obuhvat
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
 languageDropDownList_t=Jezik
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Austrija
-locale.azerbaijan=Azerbaijan
-locale.belgium=Belgija
-locale.bulgaria=Bulgaria
-locale.croatia=Hrvatska
-locale.croatian=hrvatski (hrv)
-locale.cyprus=Cipar
-locale.czech=Republika Češka
-locale.czechlanguage=češki (cze/cse)
-locale.danish=danski (dan)
-locale.denmark=Danska
-locale.dutch=holandski (dut)
-locale.english=engleski (eng)
-locale.estonia=Estonija
-locale.estonian=estonski (est)
-locale.finland=Finska
-locale.finnish=finski (fin)
-locale.france=Francuska
-locale.french=francuski (fre)
-locale.georgia=Georgia
-locale.german=njemački (deu)
-locale.germany=Njemačka
-locale.greece=Grčka
-locale.greek=grčki (ell/gre)
-locale.hungarian=madžarski (hun)
-locale.hungary=Madžarska
-locale.iceland=Island
-locale.icelandic=islandski (ice)
-locale.ireland=Irska
-locale.italy.florence=Italija - Firenca
-locale.italy.rome=Italija - Rim
-locale.latvia=Latvija
-locale.latvian=latvijski (lav)
-locale.liechtenstein=Lihtenštajn
-locale.lithuania=Litva
-locale.lithuanian=litvanski (lit)
-locale.luxembourg=Luksemburg
-locale.luxemburgish=Luxemburgish (ltz)
-locale.malta=Malta
-locale.maltese=Maltese (mlt)
-locale.moldova=Moldova
-locale.netherlands=Nizozemska
-locale.norway=Norveška
-locale.norwegian=Norwegian (nor)
-locale.poland=Poljska
-locale.polish=Polish (pol)
-locale.portugal=Portugal
-locale.portuguese=portugalski (por)
-locale.romania=Romania
-locale.romanian=Romanian (rom)
-locale.russia.moscow=Russia - Moscow
-locale.russia.st.petersburg=Russia - Saint Petersburg
-locale.russian=Russian (rus)
-locale.serbia=Srbija
-locale.serbian=srpski (scc)
-locale.slovak=slovački (slo)
-locale.slovakia=Slovačka
-locale.slovenian=slovenski (slv)
-locale.spain=Španjolska
-locale.spanish=španjolski (esp)
-locale.sweden=Švedska
-locale.swedish=švedski (sve/swe)
-locale.switzerland=Švicarska
-locale.turkey=Turkey
-locale.uk=Ujedinjeno Kraljevstvo
-locale.ukraine=Ukraine
 registrationSucceed_t=Uspješno ste se registrirali
