--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -118,6 +118,74 @@ _failure.search.saved=A keresés mentése sikertelen.
 _header.actions=Műveletek
 _header.relatedcontent=Kapcsolódó tartalom
 _language_select.italian=olasz
+_locale.AL=Albánia
+_locale.AM=Örményország
+_locale.AT=Ausztria
+_locale.AZ=Azerbajdzsán
+_locale.BE=Belgium
+_locale.BG=Bulgária
+_locale.CH=Svájc
+_locale.CY=Ciprus
+_locale.CZ=Cseh Köztársaság
+_locale.DE=Németország
+_locale.EE=Észtország
+_locale.ES=Spanyolország
+_locale.FI=Finnország
+_locale.FR=Franciaország
+_locale.GB=Egyesült Királyság
+_locale.GE=Grúzia
+_locale.GR=Görögország
+_locale.HR=Horvátország
+_locale.HU=Magyarország
+_locale.IE=Írország
+_locale.IS=Izland
+_locale.IT.florence=Olaszország-Firenze
+_locale.IT.rome=Olaszország-Róma
+_locale.LI=Lichtenstein
+_locale.LT=Litvánia
+_locale.LU=Luxemburg
+_locale.LV=Lettország
+_locale.MD=Moldávia
+_locale.MT=Málta
+_locale.NL=Hollandia
+_locale.NO=Norvégia
+_locale.PL=Lengyelország
+_locale.PT=Portugália
+_locale.RO=Románia
+_locale.RS=Szerbia
+_locale.RU.moscow=Oroszország-Moszkva
+_locale.RU.st.petersburg=Oroszország-Szentpétervár
+_locale.SE=Svédország
+_locale.SK=Szlovákia
+_locale.TR=Törökország
+_locale.UA=Ukrajna
+_locale.cs=cseh
+_locale.da=Dánia
+_locale.danish=dán
+_locale.de=német
+_locale.el=görög
+_locale.en=angol
+_locale.es=spanyol
+_locale.et=észt
+_locale.fi=finn
+_locale.fr=francia
+_locale.hr=horvát
+_locale.hu=magyar
+_locale.is=izlandi
+_locale.lb=luxemburgi
+_locale.lt=litván
+_locale.lv=lett
+_locale.mt=máltai
+_locale.nl=holland
+_locale.norwegian=norvég
+_locale.pl=lengyel
+_locale.pt=portugál
+_locale.ro=román
+_locale.ru=orosz
+_locale.sk=szlovák
+_locale.sl=szlovén
+_locale.sr=szerb
+_locale.sv=svéd
 _metadata.dc.contributor=Közreműködő
 _metadata.dc.coverage=Tartalom
 _metadata.dc.creator=Szerző
@@ -205,72 +273,4 @@ _unused.view.with.labels=Feliratos nézet
 _unused.view.without.labels=Felirat nélküli nézet
 _unused.you.have.search.for=Keresés
 languageDropDownList_t=Nyelv
-locale.albania=Albánia
-locale.armenia=Örményország
-locale.austria=Ausztria
-locale.azerbaijan=Azerbajdzsán
-locale.belgium=Belgium
-locale.bulgaria=Bulgária
-locale.croatia=Horvátország
-locale.croatian=horvát
-locale.cyprus=Ciprus
-locale.czech=Cseh Köztársaság
-locale.czechlanguage=cseh
-locale.danish=dán
-locale.denmark=Dánia
-locale.dutch=holland
-locale.english=angol
-locale.estonia=Észtország
-locale.estonian=észt
-locale.finland=Finnország
-locale.finnish=finn
-locale.france=Franciaország
-locale.french=francia
-locale.georgia=Grúzia
-locale.german=német
-locale.germany=Németország
-locale.greece=Görögország
-locale.greek=görög
-locale.hungarian=magyar
-locale.hungary=Magyarország
-locale.iceland=Izland
-locale.icelandic=izlandi
-locale.ireland=Írország
-locale.italy.florence=Olaszország-Firenze
-locale.italy.rome=Olaszország-Róma
-locale.latvia=Lettország
-locale.latvian=lett
-locale.liechtenstein=Lichtenstein
-locale.lithuania=Litvánia
-locale.lithuanian=litván
-locale.luxembourg=Luxemburg
-locale.luxemburgish=luxemburgi
-locale.malta=Málta
-locale.maltese=máltai
-locale.moldova=Moldávia
-locale.netherlands=Hollandia
-locale.norway=Norvégia
-locale.norwegian=norvég
-locale.poland=Lengyelország
-locale.polish=lengyel
-locale.portugal=Portugália
-locale.portuguese=portugál
-locale.romania=Románia
-locale.romanian=román
-locale.russia.moscow=Oroszország-Moszkva
-locale.russia.st.petersburg=Oroszország-Szentpétervár
-locale.russian=orosz
-locale.serbia=Szerbia
-locale.serbian=szerb
-locale.slovak=szlovák
-locale.slovakia=Szlovákia
-locale.slovenian=szlovén
-locale.spain=Spanyolország
-locale.spanish=spanyol
-locale.sweden=Svédország
-locale.swedish=svéd
-locale.switzerland=Svájc
-locale.turkey=Törökország
-locale.uk=Egyesült Királyság
-locale.ukraine=Ukrajna
 registrationSucceed_t=Ön sikeresen regisztrált.
