--- a/portal/src/main/resources/i18n/messages_is.properties
+++ b/portal/src/main/resources/i18n/messages_is.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Vistun á leit mistókst
 _header.actions=Aðgerðir
 _header.relatedcontent=Tengt efni
 _language_select.italian=Ítalska (ita)
+_locale.AL=Albaníu
+_locale.AM=Armeníu
+_locale.AT=Austurríki
+_locale.AZ=Aserbaidsjan
+_locale.BE=Belgíu
+_locale.BG=Búlgaríu
+_locale.CH=Sviss
+_locale.CY=Kýpur
+_locale.CZ=Tékklandi
+_locale.DE=Þýskalandi
+_locale.EE=Eistlandi
+_locale.ES=Spáni
+_locale.FI=Finnlandi
+_locale.FR=Frakklandi
+_locale.GB=Bretlandi
+_locale.GE=Georgíu
+_locale.GR=Grikklandi
+_locale.HR=Króatíu
+_locale.HU=Ungverjalandi
+_locale.IE=Írlandi
+_locale.IS=Íslandi
+_locale.IT.florence=Ítalíu-Flórens
+_locale.IT.rome=Ítalíu - Róm
+_locale.LI=Liechtenstein
+_locale.LT=Litháen
+_locale.LU=Lúxemborg
+_locale.LV=Lettlandi
+_locale.MD=Moldóvu
+_locale.MT=Möltu
+_locale.NL=Hollandi
+_locale.NO=Noregi
+_locale.PL=Póllandi
+_locale.PT=Portúgal
+_locale.RO=Rúmeníu
+_locale.RS=Serbíu
+_locale.RU.moscow=Rússlandi - Moskvu
+_locale.RU.st.petersburg=Rússlandi - Sankti Pétursborg
+_locale.SE=Svíþjóð
+_locale.SK=Slóvakíu
+_locale.TR=Tyrklandi
+_locale.UA=Úkraínu
+_locale.cs=Tékkneska (cze/cse)
+_locale.da=Danmörku
+_locale.danish=Danska (dan)
+_locale.de=Þýska (ger)
+_locale.el=Gríska (ell/gre)
+_locale.en=Enska (eng)
+_locale.es=Spænska (esp)
+_locale.et=Eistneska (est)
+_locale.fi=Finnska (fin)
+_locale.fr=Franska (fre)
+_locale.hr=Króatíska (hrv)
+_locale.hu=Ungverska (hun)
+_locale.is=Íslenska (ice)
+_locale.lb=Luxemborgíska (ltz)
+_locale.lt=Litháíska (lit)
+_locale.lv=Lettneska (lav)
+_locale.mt=Maltneska (mlt)
+_locale.nl=Hollenska (dut)
+_locale.norwegian=Norska (nor)
+_locale.pl=Pólska (pol)
+_locale.pt=Portúgalska (por)
+_locale.ro=Rúmenska
+_locale.ru=Rússneska
+_locale.sk=Slóvakíska (slo)
+_locale.sl=Slóvenska (slv)
+_locale.sr=Serbneska (scc)
+_locale.sv=Sænska (sve/swe)
 _metadata.dc.contributor=Samverkamenn
 _metadata.dc.coverage=Yfirgrip
 _metadata.dc.creator=Höfundur
@@ -205,72 +273,4 @@ _unused.view.with.labels=Skoða merki
 _unused.view.without.labels=Fela merki
 _unused.you.have.search.for=Þú leitaðir að
 languageDropDownList_t=Tungumál
-locale.albania=Albaníu
-locale.armenia=Armeníu
-locale.austria=Austurríki
-locale.azerbaijan=Aserbaidsjan
-locale.belgium=Belgíu
-locale.bulgaria=Búlgaríu
-locale.croatia=Króatíu
-locale.croatian=Króatíska (hrv)
-locale.cyprus=Kýpur
-locale.czech=Tékklandi
-locale.czechlanguage=Tékkneska (cze/cse)
-locale.danish=Danska (dan)
-locale.denmark=Danmörku
-locale.dutch=Hollenska (dut)
-locale.english=Enska (eng)
-locale.estonia=Eistlandi
-locale.estonian=Eistneska (est)
-locale.finland=Finnlandi
-locale.finnish=Finnska (fin)
-locale.france=Frakklandi
-locale.french=Franska (fre)
-locale.georgia=Georgíu
-locale.german=Þýska (ger)
-locale.germany=Þýskalandi
-locale.greece=Grikklandi
-locale.greek=Gríska (ell/gre)
-locale.hungarian=Ungverska (hun)
-locale.hungary=Ungverjalandi
-locale.iceland=Íslandi
-locale.icelandic=Íslenska (ice)
-locale.ireland=Írlandi
-locale.italy.florence=Ítalíu-Flórens
-locale.italy.rome=Ítalíu - Róm
-locale.latvia=Lettlandi
-locale.latvian=Lettneska (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Litháen
-locale.lithuanian=Litháíska (lit)
-locale.luxembourg=Lúxemborg
-locale.luxemburgish=Luxemborgíska (ltz)
-locale.malta=Möltu
-locale.maltese=Maltneska (mlt)
-locale.moldova=Moldóvu
-locale.netherlands=Hollandi
-locale.norway=Noregi
-locale.norwegian=Norska (nor)
-locale.poland=Póllandi
-locale.polish=Pólska (pol)
-locale.portugal=Portúgal
-locale.portuguese=Portúgalska (por)
-locale.romania=Rúmeníu
-locale.romanian=Rúmenska
-locale.russia.moscow=Rússlandi - Moskvu
-locale.russia.st.petersburg=Rússlandi - Sankti Pétursborg
-locale.russian=Rússneska
-locale.serbia=Serbíu
-locale.serbian=Serbneska (scc)
-locale.slovak=Slóvakíska (slo)
-locale.slovakia=Slóvakíu
-locale.slovenian=Slóvenska (slv)
-locale.spain=Spáni
-locale.spanish=Spænska (esp)
-locale.sweden=Svíþjóð
-locale.swedish=Sænska (sve/swe)
-locale.switzerland=Sviss
-locale.turkey=Tyrklandi
-locale.uk=Bretlandi
-locale.ukraine=Úkraínu
 registrationSucceed_t=Skráning tókst
