--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Salvataggio ricerca fallito
 _header.actions=Azioni
 _header.relatedcontent=Contenuti correlati
 _language_select.italian=italiano
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Austria
+_locale.AZ=Azerbaijan
+_locale.BE=Belgio
+_locale.BG=Bulgaria
+_locale.CH=Svizzera
+_locale.CY=Cipro
+_locale.CZ=Repubblica Ceca
+_locale.DE=Germania
+_locale.EE=Estonia
+_locale.ES=Spagna
+_locale.FI=Finlandia
+_locale.FR=Francia
+_locale.GB=Regno Unito
+_locale.GE=Georgia
+_locale.GR=Grecia
+_locale.HR=Croazia
+_locale.HU=Ungheria
+_locale.IE=Irlanda
+_locale.IS=Islanda
+_locale.IT.florence=Italia - Firenze
+_locale.IT.rome=Italia - Roma
+_locale.LI=Liechtenstein
+_locale.LT=Lituania
+_locale.LU=Lussemburgo
+_locale.LV=Lettonia
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Paesi Bassi
+_locale.NO=Norvegia
+_locale.PL=Polonia
+_locale.PT=Portogallo
+_locale.RO=Romania
+_locale.RS=Serbia
+_locale.RU.moscow=Russia - Mosca
+_locale.RU.st.petersburg=Russia - San Pietroburgo
+_locale.SE=Svezia
+_locale.SK=Slovacchia
+_locale.TR=Turchia
+_locale.UA=Ucraina
+_locale.cs=ceco
+_locale.da=Danimarca
+_locale.danish=danese
+_locale.de=tedesco
+_locale.el=greco
+_locale.en=inglese
+_locale.es=spagnolo
+_locale.et=estone
+_locale.fi=finlandese
+_locale.fr=francese
+_locale.hr=croato
+_locale.hu=ungherese
+_locale.is=islandese
+_locale.lb=lussemburghese
+_locale.lt=lituano
+_locale.lv=lettone
+_locale.mt=maltese
+_locale.nl=olandese
+_locale.norwegian=norvegese
+_locale.pl=polacco
+_locale.pt=portoghese
+_locale.ro=rumeno
+_locale.ru=russo
+_locale.sk=slovacco
+_locale.sl=sloveno
+_locale.sr=serbo
+_locale.sv=svedese
 _metadata.dc.contributor=Autore di contributo subordinato
 _metadata.dc.coverage=Copertura
 _metadata.dc.creator=Autore
@@ -205,72 +273,4 @@ _unused.view.with.labels=Visualizza con le etichette
 _unused.view.without.labels=Visualizza senza etichette
 _unused.you.have.search.for=Hai cercato
 languageDropDownList_t=Lingua
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Austria
-locale.azerbaijan=Azerbaijan
-locale.belgium=Belgio
-locale.bulgaria=Bulgaria
-locale.croatia=Croazia
-locale.croatian=croato
-locale.cyprus=Cipro
-locale.czech=Repubblica Ceca
-locale.czechlanguage=ceco
-locale.danish=danese
-locale.denmark=Danimarca
-locale.dutch=olandese
-locale.english=inglese
-locale.estonia=Estonia
-locale.estonian=estone
-locale.finland=Finlandia
-locale.finnish=finlandese
-locale.france=Francia
-locale.french=francese
-locale.georgia=Georgia
-locale.german=tedesco
-locale.germany=Germania
-locale.greece=Grecia
-locale.greek=greco
-locale.hungarian=ungherese
-locale.hungary=Ungheria
-locale.iceland=Islanda
-locale.icelandic=islandese
-locale.ireland=Irlanda
-locale.italy.florence=Italia - Firenze
-locale.italy.rome=Italia - Roma
-locale.latvia=Lettonia
-locale.latvian=lettone
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Lituania
-locale.lithuanian=lituano
-locale.luxembourg=Lussemburgo
-locale.luxemburgish=lussemburghese
-locale.malta=Malta
-locale.maltese=maltese
-locale.moldova=Moldova
-locale.netherlands=Paesi Bassi
-locale.norway=Norvegia
-locale.norwegian=norvegese
-locale.poland=Polonia
-locale.polish=polacco
-locale.portugal=Portogallo
-locale.portuguese=portoghese
-locale.romania=Romania
-locale.romanian=rumeno
-locale.russia.moscow=Russia - Mosca
-locale.russia.st.petersburg=Russia - San Pietroburgo
-locale.russian=russo
-locale.serbia=Serbia
-locale.serbian=serbo
-locale.slovak=slovacco
-locale.slovakia=Slovacchia
-locale.slovenian=sloveno
-locale.spain=Spagna
-locale.spanish=spagnolo
-locale.sweden=Svezia
-locale.swedish=svedese
-locale.switzerland=Svizzera
-locale.turkey=Turchia
-locale.uk=Regno Unito
-locale.ukraine=Ucraina
 registrationSucceed_t=La tua registrazione e'avvenuta con successo
