--- a/portal/src/main/resources/i18n/messages_ka.properties
+++ b/portal/src/main/resources/i18n/messages_ka.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=ტალურ (ტ)
+_locale.AL=ალბანეთი
+_locale.AM=სომხეთი
+_locale.AT=ავსტრია
+_locale.AZ=აზერბაიჯანი
+_locale.BE=ბელგია
+_locale.BG=ბულგარეთი
+_locale.CH=შვეიცარია
+_locale.CY=კვიპროსი
+_locale.CZ=ჩეხეთის რესპუბლიკა
+_locale.DE=გერმანია
+_locale.EE=ესტონეთი
+_locale.ES=ესპანეთი
+_locale.FI=ფინეთი
+_locale.FR=საფრანგეთი
+_locale.GB=გაერთიანებული სამეფო
+_locale.GE=საქართველო
+_locale.GR=საბერძნეთი
+_locale.HR=ხორვატია
+_locale.HU=უნგრეთი
+_locale.IE=ირლანდია
+_locale.IS=ისლანდია
+_locale.IT.florence=იტალია – ფლორენცია
+_locale.IT.rome=იტალია – რომი
+_locale.LI=ლიხტენშტაინი
+_locale.LT=ლიტვა
+_locale.LU=ლუქსემბურგი
+_locale.LV=ლატვია
+_locale.MD=მოლდოვეთი
+_locale.MT=მალტა
+_locale.NL=ნიდერლანდები
+_locale.NO=ნორვეგია
+_locale.PL=პოლონეთი
+_locale.PT=პორტუგალია
+_locale.RO=რუმინეთი
+_locale.RS=სერბეთი
+_locale.RU.moscow=რუსეთი – მოსკოვი
+_locale.RU.st.petersburg=რუსეთი – სანკტ–პეტერბურგი
+_locale.SE=შვედეთი
+_locale.SK=სლოვაკეთი
+_locale.TR=თურქეთი
+_locale.UA=უკრაინა
+_locale.cs=ჩეხურ (ჩეხ)
+_locale.da=დანია
+_locale.danish=დანურ (დან)
+_locale.de=გერმანულ (გერ)
+_locale.el=ერძნულ (ერძნ)
+_locale.en=ნგლსურ (ნგ)
+_locale.es=ესპანურ (ესპ)
+_locale.et=ესტორნურ (ესტ)
+_locale.fi=ფნურ (ფნ)
+_locale.fr=ფრანგულ (ფრ)
+_locale.hr=ხორვატულ (ხორვ)
+_locale.hu=უნგრულ (უნგრ)
+_locale.is=სლანდაურ (სლ)
+_locale.lb=ლუქსემურგულ (ლუქს)
+_locale.lt=ლტვურ (ლტ)
+_locale.lv=ლატვურ (ლატ)
+_locale.mt=მალტურ (მალტ)
+_locale.nl=ნდერლანდურ (ნდ)
+_locale.norwegian=ნორვეგულ (ნორვ)
+_locale.pl=პოლონურ (პოლ)
+_locale.pt=პორტუგალურ (პორ)
+_locale.ro=რუმნულ (რუმ)
+_locale.ru=რუსულ (რუს)
+_locale.sk=სლოვაკურ (სლოვაკ)
+_locale.sl=სლოვენურ (სლოვენ)
+_locale.sr=სერულ (სერ)
+_locale.sv=ვედურ (ვედ)
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=დაფარვა
 _metadata.dc.creator=ავტორი
@@ -205,72 +273,4 @@ _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
 languageDropDownList_t=ენა
-locale.albania=ალბანეთი
-locale.armenia=სომხეთი
-locale.austria=ავსტრია
-locale.azerbaijan=აზერბაიჯანი
-locale.belgium=ბელგია
-locale.bulgaria=ბულგარეთი
-locale.croatia=ხორვატია
-locale.croatian=ხორვატულ (ხორვ)
-locale.cyprus=კვიპროსი
-locale.czech=ჩეხეთის რესპუბლიკა
-locale.czechlanguage=ჩეხურ (ჩეხ)
-locale.danish=დანურ (დან)
-locale.denmark=დანია
-locale.dutch=ნდერლანდურ (ნდ)
-locale.english=ნგლსურ (ნგ)
-locale.estonia=ესტონეთი
-locale.estonian=ესტორნურ (ესტ)
-locale.finland=ფინეთი
-locale.finnish=ფნურ (ფნ)
-locale.france=საფრანგეთი
-locale.french=ფრანგულ (ფრ)
-locale.georgia=საქართველო
-locale.german=გერმანულ (გერ)
-locale.germany=გერმანია
-locale.greece=საბერძნეთი
-locale.greek=ერძნულ (ერძნ)
-locale.hungarian=უნგრულ (უნგრ)
-locale.hungary=უნგრეთი
-locale.iceland=ისლანდია
-locale.icelandic=სლანდაურ (სლ)
-locale.ireland=ირლანდია
-locale.italy.florence=იტალია – ფლორენცია
-locale.italy.rome=იტალია – რომი
-locale.latvia=ლატვია
-locale.latvian=ლატვურ (ლატ)
-locale.liechtenstein=ლიხტენშტაინი
-locale.lithuania=ლიტვა
-locale.lithuanian=ლტვურ (ლტ)
-locale.luxembourg=ლუქსემბურგი
-locale.luxemburgish=ლუქსემურგულ (ლუქს)
-locale.malta=მალტა
-locale.maltese=მალტურ (მალტ)
-locale.moldova=მოლდოვეთი
-locale.netherlands=ნიდერლანდები
-locale.norway=ნორვეგია
-locale.norwegian=ნორვეგულ (ნორვ)
-locale.poland=პოლონეთი
-locale.polish=პოლონურ (პოლ)
-locale.portugal=პორტუგალია
-locale.portuguese=პორტუგალურ (პორ)
-locale.romania=რუმინეთი
-locale.romanian=რუმნულ (რუმ)
-locale.russia.moscow=რუსეთი – მოსკოვი
-locale.russia.st.petersburg=რუსეთი – სანკტ–პეტერბურგი
-locale.russian=რუსულ (რუს)
-locale.serbia=სერბეთი
-locale.serbian=სერულ (სერ)
-locale.slovak=სლოვაკურ (სლოვაკ)
-locale.slovakia=სლოვაკეთი
-locale.slovenian=სლოვენურ (სლოვენ)
-locale.spain=ესპანეთი
-locale.spanish=ესპანურ (ესპ)
-locale.sweden=შვედეთი
-locale.swedish=ვედურ (ვედ)
-locale.switzerland=შვეიცარია
-locale.turkey=თურქეთი
-locale.uk=გაერთიანებული სამეფო
-locale.ukraine=უკრაინა
 registrationSucceed_t=რეგისტრაციამ წარმატებით ჩაიარა
