--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Paieškos išsaugojimas nepavyko
 _header.actions=Veiksmai
 _header.relatedcontent=Susijęs turinys
 _language_select.italian=Italų (ita)
+_locale.AL=Albanija
+_locale.AM=Armėnija
+_locale.AT=Austrija
+_locale.AZ=Azerbaidžanas
+_locale.BE=Belgija
+_locale.BG=Bulgarija
+_locale.CH=Šveicarija
+_locale.CY=Kipras
+_locale.CZ=Čekijos Respublika
+_locale.DE=Vokietija
+_locale.EE=Estija
+_locale.ES=Ispanija
+_locale.FI=Suomija
+_locale.FR=Prancūzija
+_locale.GB=Jungtinė Karalystė
+_locale.GE=Gruzija
+_locale.GR=Graikija
+_locale.HR=Kroatija
+_locale.HU=Vengrija
+_locale.IE=Airija
+_locale.IS=Islandija
+_locale.IT.florence=Italija-Florencija
+_locale.IT.rome=Italija-Roma
+_locale.LI=Lichtenšteinas
+_locale.LT=Lietuva
+_locale.LU=Liuksemburgas
+_locale.LV=Latvija
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Olandija
+_locale.NO=Norvegija
+_locale.PL=Lenkija
+_locale.PT=Portugalija
+_locale.RO=Rumunija
+_locale.RS=Serbija
+_locale.RU.moscow=Rusija - Maskva
+_locale.RU.st.petersburg=Rusija - Sankt Peterburgas
+_locale.SE=Švedija
+_locale.SK=Slovakija
+_locale.TR=Turkija
+_locale.UA=Ukraina
+_locale.cs=Čekų (cze/cse)
+_locale.da=Danija
+_locale.danish=Danų (dan)
+_locale.de=Vokiečių (deu)
+_locale.el=Graikų (ell/gre)
+_locale.en=Anglų (eng)
+_locale.es=Ispanų (esp)
+_locale.et=Estų (est)
+_locale.fi=Suomių (fin)
+_locale.fr=Prancūzų (fre)
+_locale.hr=Kroatų (hrv)
+_locale.hu=Vengrų (hun)
+_locale.is=Islandų (ice)
+_locale.lb=Liuksemburgiečių
+_locale.lt=Lietuvių (lit)
+_locale.lv=Latvių (lav)
+_locale.mt=Maltiečių
+_locale.nl=Olandų (dut)
+_locale.norwegian=Norvegų
+_locale.pl=Lenkų
+_locale.pt=Portugalų (por)
+_locale.ro=Rumunų (rom)
+_locale.ru=Rusų (rus)
+_locale.sk=Slovakų (slo)
+_locale.sl=Slovėnų (slv)
+_locale.sr=Serbų (scc)
+_locale.sv=Švedų (sve/swe)
 _metadata.dc.contributor=Bendraautorius
 _metadata.dc.coverage=Aprėptis
 _metadata.dc.creator=Autorius
@@ -205,72 +273,4 @@ _unused.view.with.labels=Žiūrėti etiketes
 _unused.view.without.labels=Žiūrėti be etikečių
 _unused.you.have.search.for=Atlikote paiešką
 languageDropDownList_t=Kalba
-locale.albania=Albanija
-locale.armenia=Armėnija
-locale.austria=Austrija
-locale.azerbaijan=Azerbaidžanas
-locale.belgium=Belgija
-locale.bulgaria=Bulgarija
-locale.croatia=Kroatija
-locale.croatian=Kroatų (hrv)
-locale.cyprus=Kipras
-locale.czech=Čekijos Respublika
-locale.czechlanguage=Čekų (cze/cse)
-locale.danish=Danų (dan)
-locale.denmark=Danija
-locale.dutch=Olandų (dut)
-locale.english=Anglų (eng)
-locale.estonia=Estija
-locale.estonian=Estų (est)
-locale.finland=Suomija
-locale.finnish=Suomių (fin)
-locale.france=Prancūzija
-locale.french=Prancūzų (fre)
-locale.georgia=Gruzija
-locale.german=Vokiečių (deu)
-locale.germany=Vokietija
-locale.greece=Graikija
-locale.greek=Graikų (ell/gre)
-locale.hungarian=Vengrų (hun)
-locale.hungary=Vengrija
-locale.iceland=Islandija
-locale.icelandic=Islandų (ice)
-locale.ireland=Airija
-locale.italy.florence=Italija-Florencija
-locale.italy.rome=Italija-Roma
-locale.latvia=Latvija
-locale.latvian=Latvių (lav)
-locale.liechtenstein=Lichtenšteinas
-locale.lithuania=Lietuva
-locale.lithuanian=Lietuvių (lit)
-locale.luxembourg=Liuksemburgas
-locale.luxemburgish=Liuksemburgiečių
-locale.malta=Malta
-locale.maltese=Maltiečių
-locale.moldova=Moldova
-locale.netherlands=Olandija
-locale.norway=Norvegija
-locale.norwegian=Norvegų
-locale.poland=Lenkija
-locale.polish=Lenkų
-locale.portugal=Portugalija
-locale.portuguese=Portugalų (por)
-locale.romania=Rumunija
-locale.romanian=Rumunų (rom)
-locale.russia.moscow=Rusija - Maskva
-locale.russia.st.petersburg=Rusija - Sankt Peterburgas
-locale.russian=Rusų (rus)
-locale.serbia=Serbija
-locale.serbian=Serbų (scc)
-locale.slovak=Slovakų (slo)
-locale.slovakia=Slovakija
-locale.slovenian=Slovėnų (slv)
-locale.spain=Ispanija
-locale.spanish=Ispanų (esp)
-locale.sweden=Švedija
-locale.swedish=Švedų (sve/swe)
-locale.switzerland=Šveicarija
-locale.turkey=Turkija
-locale.uk=Jungtinė Karalystė
-locale.ukraine=Ukraina
 registrationSucceed_t=Registracija baigta
