--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Meklējuma saglabāšana neizdevās
 _header.actions=Darbības
 _header.relatedcontent=Saistītais saturs
 _language_select.italian=itāļu
+_locale.AL=Albānija
+_locale.AM=Armēnija
+_locale.AT=Austrija
+_locale.AZ=Azerbeidžāna
+_locale.BE=Beļģija
+_locale.BG=Bulgārija
+_locale.CH=Šveice
+_locale.CY=Kipra
+_locale.CZ=Čehija
+_locale.DE=Vācija
+_locale.EE=Igaunija
+_locale.ES=Spānija
+_locale.FI=Somija
+_locale.FR=Francija
+_locale.GB=Apvienotā Karaliste
+_locale.GE=Gruzija
+_locale.GR=Grieķija
+_locale.HR=Horvātija
+_locale.HU=Ungārija
+_locale.IE=Īrija
+_locale.IS=Islande
+_locale.IT.florence=Itālija-Florence
+_locale.IT.rome=Itālija-Roma
+_locale.LI=Lihtenšteina
+_locale.LT=Lietuva
+_locale.LU=Luksemburga
+_locale.LV=Latvija
+_locale.MD=Moldāvija
+_locale.MT=Malta
+_locale.NL=Holande
+_locale.NO=Norvēģija
+_locale.PL=Polija
+_locale.PT=Portugāle
+_locale.RO=Rumānija
+_locale.RS=Serbija
+_locale.RU.moscow=Krievija - Maskava
+_locale.RU.st.petersburg=Krievija - Sankt Pēterburga
+_locale.SE=Zviedrija
+_locale.SK=Slovākija
+_locale.TR=Turcija
+_locale.UA=Ukraina
+_locale.cs=čehu
+_locale.da=Dānija
+_locale.danish=dāņu
+_locale.de=vācu
+_locale.el=grieķu
+_locale.en=angļu
+_locale.es=spāņu
+_locale.et=igauņu
+_locale.fi=somu
+_locale.fr=franču
+_locale.hr=horvātu
+_locale.hu=ungāru
+_locale.is=islandiešu
+_locale.lb=luksemburgiešu
+_locale.lt=lietuviešu
+_locale.lv=latviešu
+_locale.mt=maltiešu
+_locale.nl=holandiešu
+_locale.norwegian=norvēģu
+_locale.pl=poļu
+_locale.pt=portugāļu
+_locale.ro=rumāņu
+_locale.ru=krievu
+_locale.sk=slovāku
+_locale.sl=slovēņu
+_locale.sr=serbu
+_locale.sv=zviedru
 _metadata.dc.contributor=Līdzradītājs
 _metadata.dc.coverage=Aptvērums
 _metadata.dc.creator=Autors
@@ -205,72 +273,4 @@ _unused.view.with.labels=Skatīt ar iezīmēm
 _unused.view.without.labels=Skatīt bez iezīmēm
 _unused.you.have.search.for=Jūs meklējāt pēc
 languageDropDownList_t=Valoda
-locale.albania=Albānija
-locale.armenia=Armēnija
-locale.austria=Austrija
-locale.azerbaijan=Azerbeidžāna
-locale.belgium=Beļģija
-locale.bulgaria=Bulgārija
-locale.croatia=Horvātija
-locale.croatian=horvātu
-locale.cyprus=Kipra
-locale.czech=Čehija
-locale.czechlanguage=čehu
-locale.danish=dāņu
-locale.denmark=Dānija
-locale.dutch=holandiešu
-locale.english=angļu
-locale.estonia=Igaunija
-locale.estonian=igauņu
-locale.finland=Somija
-locale.finnish=somu
-locale.france=Francija
-locale.french=franču
-locale.georgia=Gruzija
-locale.german=vācu
-locale.germany=Vācija
-locale.greece=Grieķija
-locale.greek=grieķu
-locale.hungarian=ungāru
-locale.hungary=Ungārija
-locale.iceland=Islande
-locale.icelandic=islandiešu
-locale.ireland=Īrija
-locale.italy.florence=Itālija-Florence
-locale.italy.rome=Itālija-Roma
-locale.latvia=Latvija
-locale.latvian=latviešu
-locale.liechtenstein=Lihtenšteina
-locale.lithuania=Lietuva
-locale.lithuanian=lietuviešu
-locale.luxembourg=Luksemburga
-locale.luxemburgish=luksemburgiešu
-locale.malta=Malta
-locale.maltese=maltiešu
-locale.moldova=Moldāvija
-locale.netherlands=Holande
-locale.norway=Norvēģija
-locale.norwegian=norvēģu
-locale.poland=Polija
-locale.polish=poļu
-locale.portugal=Portugāle
-locale.portuguese=portugāļu
-locale.romania=Rumānija
-locale.romanian=rumāņu
-locale.russia.moscow=Krievija - Maskava
-locale.russia.st.petersburg=Krievija - Sankt Pēterburga
-locale.russian=krievu
-locale.serbia=Serbija
-locale.serbian=serbu
-locale.slovak=slovāku
-locale.slovakia=Slovākija
-locale.slovenian=slovēņu
-locale.spain=Spānija
-locale.spanish=spāņu
-locale.sweden=Zviedrija
-locale.swedish=zviedru
-locale.switzerland=Šveice
-locale.turkey=Turcija
-locale.uk=Apvienotā Karaliste
-locale.ukraine=Ukraina
 registrationSucceed_t=Jūsu reģistrācija ir veiksmīga
