--- a/portal/src/main/resources/i18n/messages_mk.properties
+++ b/portal/src/main/resources/i18n/messages_mk.properties
@@ -117,6 +117,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=Италијански (ита)
+_locale.AL=Албанија
+_locale.AM=Ерменија
+_locale.AT=Австрија
+_locale.AZ=Азербејџан
+_locale.BE=Белгија
+_locale.BG=Бугарија
+_locale.CH=Швајцарија
+_locale.CY=Кипар
+_locale.CZ=Република Чешка
+_locale.DE=Германија
+_locale.EE=Естонија
+_locale.ES=Шпанија
+_locale.FI=Финска
+_locale.FR=Франција
+_locale.GB=Обединето Кралство
+_locale.GE=Грузија
+_locale.GR=Грција
+_locale.HR=Хрватска
+_locale.HU=Унгарија
+_locale.IE=Ирска
+_locale.IS=Исланд
+_locale.IT.florence=Италија-Фиренца
+_locale.IT.rome=Италија-Рим
+_locale.LI=Лихтенштајн
+_locale.LT=Литванија
+_locale.LU=Луксембург
+_locale.LV=Латвија
+_locale.MD=Молдавија
+_locale.MT=Малта
+_locale.NL=Холандија
+_locale.NO=Норвешка
+_locale.PL=Полска
+_locale.PT=Португалија
+_locale.RO=Романија
+_locale.RS=Србија
+_locale.RU.moscow=Русија-Москва
+_locale.RU.st.petersburg=Русија-Санкт Петерсбург
+_locale.SE=Шведска
+_locale.SK=Словачка
+_locale.TR=Турција
+_locale.UA=Украина
+_locale.cs=Чешки (чеш)
+_locale.da=Данска
+_locale.danish=Дански (дан)
+_locale.de=Германски (гер)
+_locale.el=Грчки (грч)
+_locale.en=Англиски (анг)
+_locale.es=Шпански (шпа)
+_locale.et=Естонски (ест)
+_locale.fi=Фински (фин)
+_locale.fr=Француски (фра)
+_locale.hr=Хрватски (хрв)
+_locale.hu=Унгарски (унг)
+_locale.is=Исландски (исл)
+_locale.lb=Луксембршки (лук)
+_locale.lt=Литвански (лит)
+_locale.lv=Латвиски (лат)
+_locale.mt=Малтешки (мал)
+_locale.nl=Холандски (хол)
+_locale.norwegian=Норвешки (нор)
+_locale.pl=Полски (пол)
+_locale.pt=Португалски (пор)
+_locale.ro=Романски (ром)
+_locale.ru=Руски (рус)
+_locale.sk=Словачки (сло)
+_locale.sl=Словенечки (слв)
+_locale.sr=Српски (срп)
+_locale.sv=Шведски (шве)
 _metadata.dc.contributor=Соработник
 _metadata.dc.coverage=Опсег
 _metadata.dc.creator=Автор
@@ -204,72 +272,4 @@ _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
 languageDropDownList_t=Јазик
-locale.albania=Албанија
-locale.armenia=Ерменија
-locale.austria=Австрија
-locale.azerbaijan=Азербејџан
-locale.belgium=Белгија
-locale.bulgaria=Бугарија
-locale.croatia=Хрватска
-locale.croatian=Хрватски (хрв)
-locale.cyprus=Кипар
-locale.czech=Република Чешка
-locale.czechlanguage=Чешки (чеш)
-locale.danish=Дански (дан)
-locale.denmark=Данска
-locale.dutch=Холандски (хол)
-locale.english=Англиски (анг)
-locale.estonia=Естонија
-locale.estonian=Естонски (ест)
-locale.finland=Финска
-locale.finnish=Фински (фин)
-locale.france=Франција
-locale.french=Француски (фра)
-locale.georgia=Грузија
-locale.german=Германски (гер)
-locale.germany=Германија
-locale.greece=Грција
-locale.greek=Грчки (грч)
-locale.hungarian=Унгарски (унг)
-locale.hungary=Унгарија
-locale.iceland=Исланд
-locale.icelandic=Исландски (исл)
-locale.ireland=Ирска
-locale.italy.florence=Италија-Фиренца
-locale.italy.rome=Италија-Рим
-locale.latvia=Латвија
-locale.latvian=Латвиски (лат)
-locale.liechtenstein=Лихтенштајн
-locale.lithuania=Литванија
-locale.lithuanian=Литвански (лит)
-locale.luxembourg=Луксембург
-locale.luxemburgish=Луксембршки (лук)
-locale.malta=Малта
-locale.maltese=Малтешки (мал)
-locale.moldova=Молдавија
-locale.netherlands=Холандија
-locale.norway=Норвешка
-locale.norwegian=Норвешки (нор)
-locale.poland=Полска
-locale.polish=Полски (пол)
-locale.portugal=Португалија
-locale.portuguese=Португалски (пор)
-locale.romania=Романија
-locale.romanian=Романски (ром)
-locale.russia.moscow=Русија-Москва
-locale.russia.st.petersburg=Русија-Санкт Петерсбург
-locale.russian=Руски (рус)
-locale.serbia=Србија
-locale.serbian=Српски (срп)
-locale.slovak=Словачки (сло)
-locale.slovakia=Словачка
-locale.slovenian=Словенечки (слв)
-locale.spain=Шпанија
-locale.spanish=Шпански (шпа)
-locale.sweden=Шведска
-locale.swedish=Шведски (шве)
-locale.switzerland=Швајцарија
-locale.turkey=Турција
-locale.uk=Обединето Кралство
-locale.ukraine=Украина
 registrationSucceed_t=Успешно сте регистрирани
