--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -118,6 +118,74 @@ _failure.search.saved=L-issejvjar tat-tiftixa falla
 _header.actions=Azzjonijiet
 _header.relatedcontent=Kontenut relatat
 _language_select.italian=Taljan (ita)
+_locale.AL=L-Albanija
+_locale.AM=L-Armenja
+_locale.AT=L-Awstrija
+_locale.AZ=L-Ażerbajġan
+_locale.BE=Il-Belġju
+_locale.BG=Il-Bulgarija
+_locale.CH=L-Iżvizzera
+_locale.CY=Ċipru
+_locale.CZ=Ir-Repubblika Ċeka
+_locale.DE=Il-Ġermanja
+_locale.EE=L-Estonja
+_locale.ES=Spanja
+_locale.FI=Il-Finlandja
+_locale.FR=Franza
+_locale.GB=Ir-Renju Unit
+_locale.GE=Il-Ġorġja
+_locale.GR=Il-Greċja
+_locale.HR=Il-Kroazja
+_locale.HU=L-Ungerija
+_locale.IE=L-Irlanda
+_locale.IS=L-Iżlanda
+_locale.IT.florence=L-Italja-Firenze
+_locale.IT.rome=L-Italja-Ruma
+_locale.LI=Il-Liechtenstein
+_locale.LT=Il-Litwanja
+_locale.LU=Il-Lussemburgu
+_locale.LV=Il-Latvja
+_locale.MD=Il-Moldova
+_locale.MT=Malta
+_locale.NL=L-Olanda
+_locale.NO=In-Norveġja
+_locale.PL=Il-Polonja
+_locale.PT=Il-Portugall
+_locale.RO=Ir-Rumanija
+_locale.RS=Is-Serbja
+_locale.RU.moscow=Ir-Russja-Moska
+_locale.RU.st.petersburg=Ir-Russja-San Pitruburgu
+_locale.SE=L-Iżvezja
+_locale.SK=Is-Slovakkja
+_locale.TR=It-Turkija
+_locale.UA=L-Ukraina
+_locale.cs=Ċek (cze/cse)
+_locale.da=Id-Danimarka
+_locale.danish=Daniż (dan)
+_locale.de=Ġermaniż (deu)
+_locale.el=Grieg (ell/gre)
+_locale.en=Ingliż (eng)
+_locale.es=Spanjol (esp)
+_locale.et=Estonjan (est)
+_locale.fi=Finlandiż (fin)
+_locale.fr=Franċiż (fre)
+_locale.hr=Kroat (hrv)
+_locale.hu=Ungeriż (hun)
+_locale.is=Iżlandiż (ice)
+_locale.lb=Lussemburgiż (ltz)
+_locale.lt=Litwan (lit)
+_locale.lv=Latvjan (lav)
+_locale.mt=Malti (mlt)
+_locale.nl=Olandiż (dut)
+_locale.norwegian=Norveġiż (nor)
+_locale.pl=Pollakk (pol)
+_locale.pt=Portugiż (por)
+_locale.ro=Rumen (rom)
+_locale.ru=Russu (rus)
+_locale.sk=Slovakk (slo)
+_locale.sl=Sloven (slv)
+_locale.sr=Serb (scc)
+_locale.sv=Żvediż (sve/swe)
 _metadata.dc.contributor=Kontributur
 _metadata.dc.coverage=Kopertura
 _metadata.dc.creator=Awtur
@@ -205,72 +273,4 @@ _unused.view.with.labels=Ara bit-tikketti
 _unused.view.without.labels=Ara bla tikketti
 _unused.you.have.search.for=Fittixt
 languageDropDownList_t=Lingwa
-locale.albania=L-Albanija
-locale.armenia=L-Armenja
-locale.austria=L-Awstrija
-locale.azerbaijan=L-Ażerbajġan
-locale.belgium=Il-Belġju
-locale.bulgaria=Il-Bulgarija
-locale.croatia=Il-Kroazja
-locale.croatian=Kroat (hrv)
-locale.cyprus=Ċipru
-locale.czech=Ir-Repubblika Ċeka
-locale.czechlanguage=Ċek (cze/cse)
-locale.danish=Daniż (dan)
-locale.denmark=Id-Danimarka
-locale.dutch=Olandiż (dut)
-locale.english=Ingliż (eng)
-locale.estonia=L-Estonja
-locale.estonian=Estonjan (est)
-locale.finland=Il-Finlandja
-locale.finnish=Finlandiż (fin)
-locale.france=Franza
-locale.french=Franċiż (fre)
-locale.georgia=Il-Ġorġja
-locale.german=Ġermaniż (deu)
-locale.germany=Il-Ġermanja
-locale.greece=Il-Greċja
-locale.greek=Grieg (ell/gre)
-locale.hungarian=Ungeriż (hun)
-locale.hungary=L-Ungerija
-locale.iceland=L-Iżlanda
-locale.icelandic=Iżlandiż (ice)
-locale.ireland=L-Irlanda
-locale.italy.florence=L-Italja-Firenze
-locale.italy.rome=L-Italja-Ruma
-locale.latvia=Il-Latvja
-locale.latvian=Latvjan (lav)
-locale.liechtenstein=Il-Liechtenstein
-locale.lithuania=Il-Litwanja
-locale.lithuanian=Litwan (lit)
-locale.luxembourg=Il-Lussemburgu
-locale.luxemburgish=Lussemburgiż (ltz)
-locale.malta=Malta
-locale.maltese=Malti (mlt)
-locale.moldova=Il-Moldova
-locale.netherlands=L-Olanda
-locale.norway=In-Norveġja
-locale.norwegian=Norveġiż (nor)
-locale.poland=Il-Polonja
-locale.polish=Pollakk (pol)
-locale.portugal=Il-Portugall
-locale.portuguese=Portugiż (por)
-locale.romania=Ir-Rumanija
-locale.romanian=Rumen (rom)
-locale.russia.moscow=Ir-Russja-Moska
-locale.russia.st.petersburg=Ir-Russja-San Pitruburgu
-locale.russian=Russu (rus)
-locale.serbia=Is-Serbja
-locale.serbian=Serb (scc)
-locale.slovak=Slovakk (slo)
-locale.slovakia=Is-Slovakkja
-locale.slovenian=Sloven (slv)
-locale.spain=Spanja
-locale.spanish=Spanjol (esp)
-locale.sweden=L-Iżvezja
-locale.swedish=Żvediż (sve/swe)
-locale.switzerland=L-Iżvizzera
-locale.turkey=It-Turkija
-locale.uk=Ir-Renju Unit
-locale.ukraine=L-Ukraina
 registrationSucceed_t=Irreġistrajt b'suċċess
