--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Lagring av søk feilet
 _header.actions=via hendelser
 _header.relatedcontent=Relatert innhold
 _language_select.italian=Italiensk
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Østerrike
+_locale.AZ=Azerbadgan
+_locale.BE=Belgia
+_locale.BG=Bulgaria
+_locale.CH=Sveits
+_locale.CY=Kypros
+_locale.CZ=Tjekkia
+_locale.DE=Tyskland
+_locale.EE=Estland
+_locale.ES=Spania
+_locale.FI=Finland
+_locale.FR=Frankrike
+_locale.GB=Storbritannia
+_locale.GE=Georgia
+_locale.GR=Hellas
+_locale.HR=Kroatia
+_locale.HU=Ungarn
+_locale.IE=Irland
+_locale.IS=Island
+_locale.IT.florence=Italia - Firenze
+_locale.IT.rome=Italia - Roma
+_locale.LI=Liechtenstein
+_locale.LT=Litauen
+_locale.LU=Luxembourg
+_locale.LV=Latvia
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Nederland
+_locale.NO=Norge
+_locale.PL=Polen
+_locale.PT=Portugal
+_locale.RO=Romania
+_locale.RS=Serbia
+_locale.RU.moscow=Russland - Moskva
+_locale.RU.st.petersburg=Russland - St. Petersburg
+_locale.SE=Sverige
+_locale.SK=Slovakia
+_locale.TR=Tyrkia
+_locale.UA=Ukraina
+_locale.cs=Tjekkisk
+_locale.da=Danmark
+_locale.danish=Dansk
+_locale.de=Tysk
+_locale.el=Gresk
+_locale.en=Engelsk
+_locale.es=Spansk
+_locale.et=Estisk
+_locale.fi=Finsk
+_locale.fr=Fransk
+_locale.hr=Kroatisk
+_locale.hu=Ungarsk
+_locale.is=Islandsk
+_locale.lb=Luxemburgsk
+_locale.lt=Litauisk
+_locale.lv=Lettisk
+_locale.mt=Maltesisk
+_locale.nl=Nederlandsk
+_locale.norwegian=Norsk
+_locale.pl=Polsk
+_locale.pt=Portugisisk
+_locale.ro=Rumensk
+_locale.ru=Russisk
+_locale.sk=Slovakisk
+_locale.sl=Slovensk
+_locale.sr=Serbisk
+_locale.sv=Svensk
 _metadata.abm.contentprovider=Institusjon
 _metadata.abm.county=Fylke
 _metadata.abm.municipality=Kommune
@@ -214,72 +282,4 @@ _unused.view.without.labels=Se uten labels
 _unused.you.have.search.for=Du har søkt på
 form.sumbit=Send
 languageDropDownList_t=Språk
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Østerrike
-locale.azerbaijan=Azerbadgan
-locale.belgium=Belgia
-locale.bulgaria=Bulgaria
-locale.croatia=Kroatia
-locale.croatian=Kroatisk
-locale.cyprus=Kypros
-locale.czech=Tjekkia
-locale.czechlanguage=Tjekkisk
-locale.danish=Dansk
-locale.denmark=Danmark
-locale.dutch=Nederlandsk
-locale.english=Engelsk
-locale.estonia=Estland
-locale.estonian=Estisk
-locale.finland=Finland
-locale.finnish=Finsk
-locale.france=Frankrike
-locale.french=Fransk
-locale.georgia=Georgia
-locale.german=Tysk
-locale.germany=Tyskland
-locale.greece=Hellas
-locale.greek=Gresk
-locale.hungarian=Ungarsk
-locale.hungary=Ungarn
-locale.iceland=Island
-locale.icelandic=Islandsk
-locale.ireland=Irland
-locale.italy.florence=Italia - Firenze
-locale.italy.rome=Italia - Roma
-locale.latvia=Latvia
-locale.latvian=Lettisk
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Litauen
-locale.lithuanian=Litauisk
-locale.luxembourg=Luxembourg
-locale.luxemburgish=Luxemburgsk
-locale.malta=Malta
-locale.maltese=Maltesisk
-locale.moldova=Moldova
-locale.netherlands=Nederland
-locale.norway=Norge
-locale.norwegian=Norsk
-locale.poland=Polen
-locale.polish=Polsk
-locale.portugal=Portugal
-locale.portuguese=Portugisisk
-locale.romania=Romania
-locale.romanian=Rumensk
-locale.russia.moscow=Russland - Moskva
-locale.russia.st.petersburg=Russland - St. Petersburg
-locale.russian=Russisk
-locale.serbia=Serbia
-locale.serbian=Serbisk
-locale.slovak=Slovakisk
-locale.slovakia=Slovakia
-locale.slovenian=Slovensk
-locale.spain=Spania
-locale.spanish=Spansk
-locale.sweden=Sverige
-locale.swedish=Svensk
-locale.switzerland=Sveits
-locale.turkey=Tyrkia
-locale.uk=Storbritannia
-locale.ukraine=Ukraina
 registrationSucceed_t=Du er nå registrert
