--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -119,6 +119,74 @@ _failure.search.saved=Zoekopdracht opslaan mislukt
 _header.actions=Acties
 _header.relatedcontent=Gerelateerde content
 _language_select.italian=Italiaans (ita)
+_locale.AL=Albanië
+_locale.AM=Armenië
+_locale.AT=Oosterijk
+_locale.AZ=Azerbeidzjan
+_locale.BE=België
+_locale.BG=Bulgarije
+_locale.CH=Zwitzerland
+_locale.CY=Cyprus
+_locale.CZ=Tsjechische Republiek
+_locale.DE=Duitsland
+_locale.EE=Estland
+_locale.ES=Spanje
+_locale.FI=Finland
+_locale.FR=Frankrijk
+_locale.GB=Verenigd Koninkrijk
+_locale.GE=Georgië
+_locale.GR=Griekenland
+_locale.HR=Croatië
+_locale.HU=Hongarije
+_locale.IE=Ierland
+_locale.IS=IJsland
+_locale.IT.florence=Italië-Florence
+_locale.IT.rome=Italë-Rome
+_locale.LI=Liechtenstein
+_locale.LT=Litouwen
+_locale.LU=Luxemburg
+_locale.LV=Letland
+_locale.MD=Moldavië
+_locale.MT=Malta
+_locale.NL=Nederland
+_locale.NO=Noorwegen
+_locale.PL=Polen
+_locale.PT=Portugal
+_locale.RO=Roemenië
+_locale.RS=Servië
+_locale.RU.moscow=Rusland - Moscow
+_locale.RU.st.petersburg=Rusland - Sint Petersburg
+_locale.SE=Zweden
+_locale.SK=Slowakije
+_locale.TR=Turkije
+_locale.UA=Oekraïne
+_locale.cs=Tsjechisch (tsj)
+_locale.da=Denemarken
+_locale.danish=Deens (dee)
+_locale.de=Duits (dui)
+_locale.el=Grieks (gri)
+_locale.en=Engels (eng)
+_locale.es=Spaans (spa)
+_locale.et=Estisch (est)
+_locale.fi=Fins (fin)
+_locale.fr=Frans (fra)
+_locale.hr=Kroatisch (kro)
+_locale.hu=Hongaars (hon)
+_locale.is=IJslands (ijs)
+_locale.lb=Luxemburgs
+_locale.lt=Litouws (lit)
+_locale.lv=Lets (let)
+_locale.mt=Maltees
+_locale.nl=Nederlands (ned)
+_locale.norwegian=Noors
+_locale.pl=Pools
+_locale.pt=Portugees (por)
+_locale.ro=Roemeens (rom)
+_locale.ru=Russisch (rus)
+_locale.sk=Slowaaks (slo)
+_locale.sl=Sloveens (slv)
+_locale.sr=Servisch (ser)
+_locale.sv=Zweeds (zwe)
 _metadata.dc.contributor=Met bijdrage van
 _metadata.dc.coverage=Herkomst
 _metadata.dc.creator=Vervaardiger
@@ -241,73 +309,5 @@ dms.version.approve=Deze versie goedkeuren
 dms.version.approve.explain=Door een versie goed te keuren worden alle andere versies verwijderd.
 dms.version.management=Versiebeheer
 languageDropDownList_t=Taal
-locale.albania=Albanië
-locale.armenia=Armenië
-locale.austria=Oosterijk
-locale.azerbaijan=Azerbeidzjan
-locale.belgium=België
-locale.bulgaria=Bulgarije
-locale.croatia=Croatië
-locale.croatian=Kroatisch (kro)
-locale.cyprus=Cyprus
-locale.czech=Tsjechische Republiek
-locale.czechlanguage=Tsjechisch (tsj)
-locale.danish=Deens (dee)
-locale.denmark=Denemarken
-locale.dutch=Nederlands (ned)
-locale.english=Engels (eng)
-locale.estonia=Estland
-locale.estonian=Estisch (est)
-locale.finland=Finland
-locale.finnish=Fins (fin)
-locale.france=Frankrijk
-locale.french=Frans (fra)
-locale.georgia=Georgië
-locale.german=Duits (dui)
-locale.germany=Duitsland
-locale.greece=Griekenland
-locale.greek=Grieks (gri)
-locale.hungarian=Hongaars (hon)
-locale.hungary=Hongarije
-locale.iceland=IJsland
-locale.icelandic=IJslands (ijs)
-locale.ireland=Ierland
-locale.italy.florence=Italië-Florence
-locale.italy.rome=Italë-Rome
-locale.latvia=Letland
-locale.latvian=Lets (let)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Litouwen
-locale.lithuanian=Litouws (lit)
-locale.luxembourg=Luxemburg
-locale.luxemburgish=Luxemburgs
-locale.malta=Malta
-locale.maltese=Maltees
-locale.moldova=Moldavië
-locale.netherlands=Nederland
-locale.norway=Noorwegen
-locale.norwegian=Noors
-locale.poland=Polen
-locale.polish=Pools
-locale.portugal=Portugal
-locale.portuguese=Portugees (por)
-locale.romania=Roemenië
-locale.romanian=Roemeens (rom)
-locale.russia.moscow=Rusland - Moscow
-locale.russia.st.petersburg=Rusland - Sint Petersburg
-locale.russian=Russisch (rus)
-locale.serbia=Servië
-locale.serbian=Servisch (ser)
-locale.slovak=Slowaaks (slo)
-locale.slovakia=Slowakije
-locale.slovenian=Sloveens (slv)
-locale.spain=Spanje
-locale.spanish=Spaans (spa)
-locale.sweden=Zweden
-locale.swedish=Zweeds (zwe)
-locale.switzerland=Zwitzerland
-locale.turkey=Turkije
-locale.uk=Verenigd Koninkrijk
-locale.ukraine=Oekraïne
 registrationSucceed_t=U bent met succes geregistreerd
 search.order.by=Sorteren op
