--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Zachowanie wyszukiwania nie powiodło się
 _header.actions=Działania
 _header.relatedcontent=Powiązana zawartość
 _language_select.italian=Włoski (ita)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Austria
+_locale.AZ=Azerbejdżan
+_locale.BE=Belgia
+_locale.BG=Bułgaria
+_locale.CH=Szwajcaria
+_locale.CY=Cypr
+_locale.CZ=Republika Czeska
+_locale.DE=Niemcy
+_locale.EE=Estonia
+_locale.ES=Hiszpania
+_locale.FI=Finlandia
+_locale.FR=Francja
+_locale.GB=Wielka Brytania
+_locale.GE=Gruzja
+_locale.GR=Grecja
+_locale.HR=Chorwacja
+_locale.HU=Węgry
+_locale.IE=Irlandia
+_locale.IS=Islandia
+_locale.IT.florence=Włochy - Florencja
+_locale.IT.rome=Włochy - Rzym
+_locale.LI=Lichtenstein
+_locale.LT=Litwa
+_locale.LU=Luksemburg
+_locale.LV=Łotwa
+_locale.MD=Mołdawia
+_locale.MT=Malta
+_locale.NL=Holandia
+_locale.NO=Norwegia
+_locale.PL=Polska
+_locale.PT=Portugalia
+_locale.RO=Rumunia
+_locale.RS=Serbia
+_locale.RU.moscow=Rosja - Moskwa
+_locale.RU.st.petersburg=Rosja - Sankt Petersburg
+_locale.SE=Szwecja
+_locale.SK=Słowacja
+_locale.TR=Turcja
+_locale.UA=Ukraina
+_locale.cs=czeski (cze/cse)
+_locale.da=Dania
+_locale.danish=Duński (dan)
+_locale.de=Niemiecki (deu)
+_locale.el=Grecki (ell/gre)
+_locale.en=Angielski (eng)
+_locale.es=Hiszpański (esp)
+_locale.et=Estoński (est)
+_locale.fi=Fiński (fin)
+_locale.fr=Francuski (fre)
+_locale.hr=Chorwacki (hrv)
+_locale.hu=węgierski (hun)
+_locale.is=Islandzki (ice)
+_locale.lb=luksemburski
+_locale.lt=Litewski (lit)
+_locale.lv=Łotewski (lav)
+_locale.mt=maltański
+_locale.nl=Holenderski (dut)
+_locale.norwegian=norweski
+_locale.pl=polski
+_locale.pt=Portugalski (por)
+_locale.ro=rumuński
+_locale.ru=rosyjski
+_locale.sk=słowacki (slo)
+_locale.sl=Słoweński (slv)
+_locale.sr=Serbski (scc)
+_locale.sv=Szwedzki (sve/swe)
 _metadata.dc.contributor=Współautor
 _metadata.dc.coverage=Zakres
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Widok z etykietami
 _unused.view.without.labels=Widok bez etykiet
 _unused.you.have.search.for=Szukasz
 languageDropDownList_t=Język
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Austria
-locale.azerbaijan=Azerbejdżan
-locale.belgium=Belgia
-locale.bulgaria=Bułgaria
-locale.croatia=Chorwacja
-locale.croatian=Chorwacki (hrv)
-locale.cyprus=Cypr
-locale.czech=Republika Czeska
-locale.czechlanguage=czeski (cze/cse)
-locale.danish=Duński (dan)
-locale.denmark=Dania
-locale.dutch=Holenderski (dut)
-locale.english=Angielski (eng)
-locale.estonia=Estonia
-locale.estonian=Estoński (est)
-locale.finland=Finlandia
-locale.finnish=Fiński (fin)
-locale.france=Francja
-locale.french=Francuski (fre)
-locale.georgia=Gruzja
-locale.german=Niemiecki (deu)
-locale.germany=Niemcy
-locale.greece=Grecja
-locale.greek=Grecki (ell/gre)
-locale.hungarian=węgierski (hun)
-locale.hungary=Węgry
-locale.iceland=Islandia
-locale.icelandic=Islandzki (ice)
-locale.ireland=Irlandia
-locale.italy.florence=Włochy - Florencja
-locale.italy.rome=Włochy - Rzym
-locale.latvia=Łotwa
-locale.latvian=Łotewski (lav)
-locale.liechtenstein=Lichtenstein
-locale.lithuania=Litwa
-locale.lithuanian=Litewski (lit)
-locale.luxembourg=Luksemburg
-locale.luxemburgish=luksemburski
-locale.malta=Malta
-locale.maltese=maltański
-locale.moldova=Mołdawia
-locale.netherlands=Holandia
-locale.norway=Norwegia
-locale.norwegian=norweski
-locale.poland=Polska
-locale.polish=polski
-locale.portugal=Portugalia
-locale.portuguese=Portugalski (por)
-locale.romania=Rumunia
-locale.romanian=rumuński
-locale.russia.moscow=Rosja - Moskwa
-locale.russia.st.petersburg=Rosja - Sankt Petersburg
-locale.russian=rosyjski
-locale.serbia=Serbia
-locale.serbian=Serbski (scc)
-locale.slovak=słowacki (slo)
-locale.slovakia=Słowacja
-locale.slovenian=Słoweński (slv)
-locale.spain=Hiszpania
-locale.spanish=Hiszpański (esp)
-locale.sweden=Szwecja
-locale.swedish=Szwedzki (sve/swe)
-locale.switzerland=Szwajcaria
-locale.turkey=Turcja
-locale.uk=Wielka Brytania
-locale.ukraine=Ukraina
 registrationSucceed_t=Rejestracja zakończona powodzeniem
