--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Guardar a pesquisa falhou
 _header.actions=Acções
 _header.relatedcontent=Conteúdo relacionado
 _language_select.italian=Italiano (ita)
+_locale.AL=Albânia
+_locale.AM=Arménia
+_locale.AT=Austria
+_locale.AZ=Azerbeijão
+_locale.BE=Bélgica
+_locale.BG=Bulgária
+_locale.CH=Suíça
+_locale.CY=Chipre
+_locale.CZ=República Checa
+_locale.DE=Alemanha
+_locale.EE=Estónia
+_locale.ES=Espanha
+_locale.FI=Finlândia
+_locale.FR=França
+_locale.GB=Reino Unido
+_locale.GE=Georgia
+_locale.GR=Grécia
+_locale.HR=Croácia
+_locale.HU=Hungria
+_locale.IE=Irlanda
+_locale.IS=Islândia
+_locale.IT.florence=Itália-Florença
+_locale.IT.rome=Itália-Roma
+_locale.LI=Liechtenstein
+_locale.LT=Lituânia
+_locale.LU=Luxemburgo
+_locale.LV=Letónia
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Holanda
+_locale.NO=Noruega
+_locale.PL=Polónia
+_locale.PT=Portugal
+_locale.RO=Roménia
+_locale.RS=Sérvia
+_locale.RU.moscow=Rússia - Moscovo
+_locale.RU.st.petersburg=Rússia - S. Petersburgo
+_locale.SE=Suécia
+_locale.SK=Eslováquia
+_locale.TR=Turquia
+_locale.UA=Ucrânia
+_locale.cs=Checo (cze/cse)
+_locale.da=Dinamarca
+_locale.danish=Dinamarquês (dan)
+_locale.de=Alemão (deu)
+_locale.el=Grego (all/gre)
+_locale.en=Inglês (eng)
+_locale.es=Espanhol (esp)
+_locale.et=Estónio (est)
+_locale.fi=Finlandês (fin)
+_locale.fr=Francês (fre)
+_locale.hr=Servo-croata(Croácia) (hrv)
+_locale.hu=Húngaro (hun)
+_locale.is=Islandês (ice)
+_locale.lb=Luxemburguês (ltz)
+_locale.lt=Lítuano (lit)
+_locale.lv=Letão (lav)
+_locale.mt=Maltês (mlt)
+_locale.nl=Holandês (dut)
+_locale.norwegian=Norueguês (nor)
+_locale.pl=Polaco (pol)
+_locale.pt=Português (por)
+_locale.ro=romeno
+_locale.ru=russo
+_locale.sk=Eslovaco (slo)
+_locale.sl=Esloveno (slv)
+_locale.sr=Servo-croata(Sérvia) (scc)
+_locale.sv=Sueco (sve/swe)
 _metadata.dc.contributor=Outro Contribuinte
 _metadata.dc.coverage=Cobertura
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Ver com etiquetas
 _unused.view.without.labels=Ver sem etiquetas
 _unused.you.have.search.for=Pesquisou por
 languageDropDownList_t=Língua
-locale.albania=Albânia
-locale.armenia=Arménia
-locale.austria=Austria
-locale.azerbaijan=Azerbeijão
-locale.belgium=Bélgica
-locale.bulgaria=Bulgária
-locale.croatia=Croácia
-locale.croatian=Servo-croata(Croácia) (hrv)
-locale.cyprus=Chipre
-locale.czech=República Checa
-locale.czechlanguage=Checo (cze/cse)
-locale.danish=Dinamarquês (dan)
-locale.denmark=Dinamarca
-locale.dutch=Holandês (dut)
-locale.english=Inglês (eng)
-locale.estonia=Estónia
-locale.estonian=Estónio (est)
-locale.finland=Finlândia
-locale.finnish=Finlandês (fin)
-locale.france=França
-locale.french=Francês (fre)
-locale.georgia=Georgia
-locale.german=Alemão (deu)
-locale.germany=Alemanha
-locale.greece=Grécia
-locale.greek=Grego (all/gre)
-locale.hungarian=Húngaro (hun)
-locale.hungary=Hungria
-locale.iceland=Islândia
-locale.icelandic=Islandês (ice)
-locale.ireland=Irlanda
-locale.italy.florence=Itália-Florença
-locale.italy.rome=Itália-Roma
-locale.latvia=Letónia
-locale.latvian=Letão (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Lituânia
-locale.lithuanian=Lítuano (lit)
-locale.luxembourg=Luxemburgo
-locale.luxemburgish=Luxemburguês (ltz)
-locale.malta=Malta
-locale.maltese=Maltês (mlt)
-locale.moldova=Moldova
-locale.netherlands=Holanda
-locale.norway=Noruega
-locale.norwegian=Norueguês (nor)
-locale.poland=Polónia
-locale.polish=Polaco (pol)
-locale.portugal=Portugal
-locale.portuguese=Português (por)
-locale.romania=Roménia
-locale.romanian=romeno
-locale.russia.moscow=Rússia - Moscovo
-locale.russia.st.petersburg=Rússia - S. Petersburgo
-locale.russian=russo
-locale.serbia=Sérvia
-locale.serbian=Servo-croata(Sérvia) (scc)
-locale.slovak=Eslovaco (slo)
-locale.slovakia=Eslováquia
-locale.slovenian=Esloveno (slv)
-locale.spain=Espanha
-locale.spanish=Espanhol (esp)
-locale.sweden=Suécia
-locale.swedish=Sueco (sve/swe)
-locale.switzerland=Suíça
-locale.turkey=Turquia
-locale.uk=Reino Unido
-locale.ukraine=Ucrânia
 registrationSucceed_t=O seu registo foi efectuado com sucesso
