--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Uloženie vyhľadávania zlyhalo
 _header.actions=Akcie
 _header.relatedcontent=Súvisiaci obsah
 _language_select.italian=Taliansky (ita)
+_locale.AL=Albánsko
+_locale.AM=Arménsko
+_locale.AT=Rakúsko
+_locale.AZ=Azerbajdžan
+_locale.BE=Belgicko
+_locale.BG=Bulharsko
+_locale.CH=Švajčiarsko
+_locale.CY=Cyprus
+_locale.CZ=Česká republika
+_locale.DE=Nemecko
+_locale.EE=Estónsko
+_locale.ES=Španielsko
+_locale.FI=Fínsko
+_locale.FR=Francúzsko
+_locale.GB=Spojené kráľovstvo
+_locale.GE=Gruzínsko
+_locale.GR=Grécko
+_locale.HR=Chorvátsko
+_locale.HU=Maďarsko
+_locale.IE=Írsko
+_locale.IS=Island
+_locale.IT.florence=Taliansko - Florencia
+_locale.IT.rome=Taliansko - Rím
+_locale.LI=Lichtenštajnsko
+_locale.LT=Litva
+_locale.LU=Luxembursko
+_locale.LV=Lotyšsko
+_locale.MD=Moldavsko
+_locale.MT=Malta
+_locale.NL=Holandsko
+_locale.NO=Nórsko
+_locale.PL=Poľsko
+_locale.PT=Portugalsko
+_locale.RO=Rumunsko
+_locale.RS=Srbsko
+_locale.RU.moscow=Rusko - Moskva
+_locale.RU.st.petersburg=Rusko - Petrohrad
+_locale.SE=Švédsko
+_locale.SK=Slovensko
+_locale.TR=Turecko
+_locale.UA=Ukrajina
+_locale.cs=Český (cze/cse)
+_locale.da=Dánsko
+_locale.danish=Dánsky (dan)
+_locale.de=Nemecký (deu)
+_locale.el=Grécky (ell/gre)
+_locale.en=Anglický (eng)
+_locale.es=Španielsky (esp)
+_locale.et=Estónsky (est)
+_locale.fi=Fínsky (fin)
+_locale.fr=Francúzsky (fre)
+_locale.hr=Chorvátsky (hrv)
+_locale.hu=Maďarský (hun)
+_locale.is=Islandský (ice)
+_locale.lb=Luxemburský (ltz)
+_locale.lt=Litovský (lit)
+_locale.lv=Lotyšský (lav)
+_locale.mt=Maltský (mlt)
+_locale.nl=Holandský (dut)
+_locale.norwegian=Nórsky (nor)
+_locale.pl=Poľský (pol)
+_locale.pt=Portugalský (por)
+_locale.ro=Rumunský (rom)
+_locale.ru=Ruský (rus)
+_locale.sk=Slovenský (slo)
+_locale.sl=Slovinský (slv)
+_locale.sr=Srbský (scc)
+_locale.sv=Švédsky (sve/swe)
 _metadata.dc.contributor=Prispievateľ
 _metadata.dc.coverage=Pokrytie
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Zobraziť s návestiami
 _unused.view.without.labels=Zobraziť bez návestí
 _unused.you.have.search.for=Hľadali ste
 languageDropDownList_t=Jazyk
-locale.albania=Albánsko
-locale.armenia=Arménsko
-locale.austria=Rakúsko
-locale.azerbaijan=Azerbajdžan
-locale.belgium=Belgicko
-locale.bulgaria=Bulharsko
-locale.croatia=Chorvátsko
-locale.croatian=Chorvátsky (hrv)
-locale.cyprus=Cyprus
-locale.czech=Česká republika
-locale.czechlanguage=Český (cze/cse)
-locale.danish=Dánsky (dan)
-locale.denmark=Dánsko
-locale.dutch=Holandský (dut)
-locale.english=Anglický (eng)
-locale.estonia=Estónsko
-locale.estonian=Estónsky (est)
-locale.finland=Fínsko
-locale.finnish=Fínsky (fin)
-locale.france=Francúzsko
-locale.french=Francúzsky (fre)
-locale.georgia=Gruzínsko
-locale.german=Nemecký (deu)
-locale.germany=Nemecko
-locale.greece=Grécko
-locale.greek=Grécky (ell/gre)
-locale.hungarian=Maďarský (hun)
-locale.hungary=Maďarsko
-locale.iceland=Island
-locale.icelandic=Islandský (ice)
-locale.ireland=Írsko
-locale.italy.florence=Taliansko - Florencia
-locale.italy.rome=Taliansko - Rím
-locale.latvia=Lotyšsko
-locale.latvian=Lotyšský (lav)
-locale.liechtenstein=Lichtenštajnsko
-locale.lithuania=Litva
-locale.lithuanian=Litovský (lit)
-locale.luxembourg=Luxembursko
-locale.luxemburgish=Luxemburský (ltz)
-locale.malta=Malta
-locale.maltese=Maltský (mlt)
-locale.moldova=Moldavsko
-locale.netherlands=Holandsko
-locale.norway=Nórsko
-locale.norwegian=Nórsky (nor)
-locale.poland=Poľsko
-locale.polish=Poľský (pol)
-locale.portugal=Portugalsko
-locale.portuguese=Portugalský (por)
-locale.romania=Rumunsko
-locale.romanian=Rumunský (rom)
-locale.russia.moscow=Rusko - Moskva
-locale.russia.st.petersburg=Rusko - Petrohrad
-locale.russian=Ruský (rus)
-locale.serbia=Srbsko
-locale.serbian=Srbský (scc)
-locale.slovak=Slovenský (slo)
-locale.slovakia=Slovensko
-locale.slovenian=Slovinský (slv)
-locale.spain=Španielsko
-locale.spanish=Španielsky (esp)
-locale.sweden=Švédsko
-locale.swedish=Švédsky (sve/swe)
-locale.switzerland=Švajčiarsko
-locale.turkey=Turecko
-locale.uk=Spojené kráľovstvo
-locale.ukraine=Ukrajina
 registrationSucceed_t=Vaša registrácia bola úspešná
