--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Shranjevanje iskanja ni uspelo
 _header.actions=Možnosti
 _header.relatedcontent=Sorodne vsebine
 _language_select.italian=italijanščina (ita)
+_locale.AL=Albanija
+_locale.AM=Armenija
+_locale.AT=Avstrija
+_locale.AZ=Azejbardžan
+_locale.BE=Belgija
+_locale.BG=Bolgarija
+_locale.CH=Švica
+_locale.CY=Ciper
+_locale.CZ=Češka republika
+_locale.DE=Nemčija
+_locale.EE=Estonija
+_locale.ES=Španija
+_locale.FI=Finska
+_locale.FR=Francija
+_locale.GB=Velika Britanija
+_locale.GE=Gruzija
+_locale.GR=Grčija
+_locale.HR=Hrvaška
+_locale.HU=Madžarska
+_locale.IE=Irska
+_locale.IS=Islandija
+_locale.IT.florence=Italija-Firence
+_locale.IT.rome=Italija-Rim
+_locale.LI=Liechtenstein
+_locale.LT=Litva
+_locale.LU=Luksemburg
+_locale.LV=Latvija
+_locale.MD=Moldavija
+_locale.MT=Malta
+_locale.NL=Nizozemska
+_locale.NO=Norveška
+_locale.PL=Poljska
+_locale.PT=Portugalska
+_locale.RO=Romunija
+_locale.RS=Srbija
+_locale.RU.moscow=Rusija - Moskva
+_locale.RU.st.petersburg=Rusija - Sankt Peterburg
+_locale.SE=Švedska
+_locale.SK=Slovaška
+_locale.TR=Turčija
+_locale.UA=Ukrajina
+_locale.cs=češčina (cze/cse)
+_locale.da=Danska
+_locale.danish=danščina (dan)
+_locale.de=nemščina (deu)
+_locale.el=grščina
+_locale.en=angleščina (eng)
+_locale.es=španščina (esp)
+_locale.et=estonščina (est)
+_locale.fi=finščina (fin)
+_locale.fr=francoščina (fre)
+_locale.hr=hrvaščina (hrv)
+_locale.hu=madžarščina (hun)
+_locale.is=islandščina (ice)
+_locale.lb=luksemburščina (ltz)
+_locale.lt=litovščina (lit)
+_locale.lv=latvijščina (lav)
+_locale.mt=malteščina (mlt)
+_locale.nl=nizozemščina (dut)
+_locale.norwegian=norveščina (nor)
+_locale.pl=poljščina (pol)
+_locale.pt=portugalščina (por)
+_locale.ro=romunščina (rom)
+_locale.ru=ruščina (rus)
+_locale.sk=slovaščina (slo)
+_locale.sl=slovenščina (slv)
+_locale.sr=srbščina (scc)
+_locale.sv=švedščina (sve/swe)
 _metadata.dc.contributor=Prispevali
 _metadata.dc.coverage=Pokritost
 _metadata.dc.creator=Avtor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Pogled z oznakami
 _unused.view.without.labels=Pogled brez oznak
 _unused.you.have.search.for=Iskali ste
 languageDropDownList_t=Jezik
-locale.albania=Albanija
-locale.armenia=Armenija
-locale.austria=Avstrija
-locale.azerbaijan=Azejbardžan
-locale.belgium=Belgija
-locale.bulgaria=Bolgarija
-locale.croatia=Hrvaška
-locale.croatian=hrvaščina (hrv)
-locale.cyprus=Ciper
-locale.czech=Češka republika
-locale.czechlanguage=češčina (cze/cse)
-locale.danish=danščina (dan)
-locale.denmark=Danska
-locale.dutch=nizozemščina (dut)
-locale.english=angleščina (eng)
-locale.estonia=Estonija
-locale.estonian=estonščina (est)
-locale.finland=Finska
-locale.finnish=finščina (fin)
-locale.france=Francija
-locale.french=francoščina (fre)
-locale.georgia=Gruzija
-locale.german=nemščina (deu)
-locale.germany=Nemčija
-locale.greece=Grčija
-locale.greek=grščina
-locale.hungarian=madžarščina (hun)
-locale.hungary=Madžarska
-locale.iceland=Islandija
-locale.icelandic=islandščina (ice)
-locale.ireland=Irska
-locale.italy.florence=Italija-Firence
-locale.italy.rome=Italija-Rim
-locale.latvia=Latvija
-locale.latvian=latvijščina (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Litva
-locale.lithuanian=litovščina (lit)
-locale.luxembourg=Luksemburg
-locale.luxemburgish=luksemburščina (ltz)
-locale.malta=Malta
-locale.maltese=malteščina (mlt)
-locale.moldova=Moldavija
-locale.netherlands=Nizozemska
-locale.norway=Norveška
-locale.norwegian=norveščina (nor)
-locale.poland=Poljska
-locale.polish=poljščina (pol)
-locale.portugal=Portugalska
-locale.portuguese=portugalščina (por)
-locale.romania=Romunija
-locale.romanian=romunščina (rom)
-locale.russia.moscow=Rusija - Moskva
-locale.russia.st.petersburg=Rusija - Sankt Peterburg
-locale.russian=ruščina (rus)
-locale.serbia=Srbija
-locale.serbian=srbščina (scc)
-locale.slovak=slovaščina (slo)
-locale.slovakia=Slovaška
-locale.slovenian=slovenščina (slv)
-locale.spain=Španija
-locale.spanish=španščina (esp)
-locale.sweden=Švedska
-locale.swedish=švedščina (sve/swe)
-locale.switzerland=Švica
-locale.turkey=Turčija
-locale.uk=Velika Britanija
-locale.ukraine=Ukrajina
 registrationSucceed_t=Uspešno ste se registrirali
