--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Det gick inte att spara sökningen
 _header.actions=Åtgärder
 _header.relatedcontent=Liknande material
 _language_select.italian=Italienska (ita)
+_locale.AL=Albanien
+_locale.AM=Armenien
+_locale.AT=Österrike
+_locale.AZ=Azerbajdzjan
+_locale.BE=Belgien
+_locale.BG=Bulgarien
+_locale.CH=Schweiz
+_locale.CY=Cypern
+_locale.CZ=Tjeckien
+_locale.DE=Tyskland
+_locale.EE=Estland
+_locale.ES=Spanien
+_locale.FI=Finland
+_locale.FR=Frankrike
+_locale.GB=Storbritannien
+_locale.GE=Georgien
+_locale.GR=Grekland
+_locale.HR=Kroatien
+_locale.HU=Ungern
+_locale.IE=Irland
+_locale.IS=Island
+_locale.IT.florence=Italien-Florens
+_locale.IT.rome=Italien-Rom
+_locale.LI=Liechtenstein
+_locale.LT=Litauen
+_locale.LU=Luxemburg
+_locale.LV=Lettland
+_locale.MD=Moldavien
+_locale.MT=Malta
+_locale.NL=Nederländerna
+_locale.NO=Norge
+_locale.PL=Polen
+_locale.PT=Portugal
+_locale.RO=Rumänien
+_locale.RS=Serbien
+_locale.RU.moscow=Ryssland - Moskva
+_locale.RU.st.petersburg=Ryssland - Sankt Petersburg
+_locale.SE=Sverige
+_locale.SK=Slovakien
+_locale.TR=Turkiet
+_locale.UA=Ukraina
+_locale.cs=Tjeckiska (cze/cse)
+_locale.da=Danmark
+_locale.danish=Danska (dan)
+_locale.de=Tyska (ger)
+_locale.el=Grekiska (ell/gre)
+_locale.en=Engelska (eng)
+_locale.es=Spanska (esp)
+_locale.et=Estniska (est)
+_locale.fi=Finska (fin)
+_locale.fr=Franska (fre)
+_locale.hr=Kroatiska (hrv)
+_locale.hu=Ungerska (hun)
+_locale.is=Isländska (ice)
+_locale.lb=Luxemburgiska (ltz)
+_locale.lt=Litauiska (lit)
+_locale.lv=Lettiska (lav)
+_locale.mt=Maltesiska (mlt)
+_locale.nl=Nederländska (dut)
+_locale.norwegian=Norska (nor)
+_locale.pl=Polska (pol)
+_locale.pt=Portugisiska (por)
+_locale.ro=Rumänska (rom)
+_locale.ru=Ryska (rus)
+_locale.sk=Slovakiska (slo)
+_locale.sl=Slovenska (slv)
+_locale.sr=Serbiska (scc)
+_locale.sv=Svenska (sve/swe)
 _metadata.dc.contributor=Medarbetare
 _metadata.dc.coverage=Täckning
 _metadata.dc.creator=Författare
@@ -205,72 +273,4 @@ _unused.view.with.labels=Visa med etiketter
 _unused.view.without.labels=Visa utan etiketter
 _unused.you.have.search.for=Du sökte efter
 languageDropDownList_t=Språk
-locale.albania=Albanien
-locale.armenia=Armenien
-locale.austria=Österrike
-locale.azerbaijan=Azerbajdzjan
-locale.belgium=Belgien
-locale.bulgaria=Bulgarien
-locale.croatia=Kroatien
-locale.croatian=Kroatiska (hrv)
-locale.cyprus=Cypern
-locale.czech=Tjeckien
-locale.czechlanguage=Tjeckiska (cze/cse)
-locale.danish=Danska (dan)
-locale.denmark=Danmark
-locale.dutch=Nederländska (dut)
-locale.english=Engelska (eng)
-locale.estonia=Estland
-locale.estonian=Estniska (est)
-locale.finland=Finland
-locale.finnish=Finska (fin)
-locale.france=Frankrike
-locale.french=Franska (fre)
-locale.georgia=Georgien
-locale.german=Tyska (ger)
-locale.germany=Tyskland
-locale.greece=Grekland
-locale.greek=Grekiska (ell/gre)
-locale.hungarian=Ungerska (hun)
-locale.hungary=Ungern
-locale.iceland=Island
-locale.icelandic=Isländska (ice)
-locale.ireland=Irland
-locale.italy.florence=Italien-Florens
-locale.italy.rome=Italien-Rom
-locale.latvia=Lettland
-locale.latvian=Lettiska (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Litauen
-locale.lithuanian=Litauiska (lit)
-locale.luxembourg=Luxemburg
-locale.luxemburgish=Luxemburgiska (ltz)
-locale.malta=Malta
-locale.maltese=Maltesiska (mlt)
-locale.moldova=Moldavien
-locale.netherlands=Nederländerna
-locale.norway=Norge
-locale.norwegian=Norska (nor)
-locale.poland=Polen
-locale.polish=Polska (pol)
-locale.portugal=Portugal
-locale.portuguese=Portugisiska (por)
-locale.romania=Rumänien
-locale.romanian=Rumänska (rom)
-locale.russia.moscow=Ryssland - Moskva
-locale.russia.st.petersburg=Ryssland - Sankt Petersburg
-locale.russian=Ryska (rus)
-locale.serbia=Serbien
-locale.serbian=Serbiska (scc)
-locale.slovak=Slovakiska (slo)
-locale.slovakia=Slovakien
-locale.slovenian=Slovenska (slv)
-locale.spain=Spanien
-locale.spanish=Spanska (esp)
-locale.sweden=Sverige
-locale.swedish=Svenska (sve/swe)
-locale.switzerland=Schweiz
-locale.turkey=Turkiet
-locale.uk=Storbritannien
-locale.ukraine=Ukraina
 registrationSucceed_t=Du har nu registrerat dig
