--- a/portal/src/main/resources/i18n/messages_tr.properties
+++ b/portal/src/main/resources/i18n/messages_tr.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=İtalyanca
+_locale.AL=Arnavutluk
+_locale.AM=Ermenistan
+_locale.AT=Avusturya
+_locale.AZ=Azerbeycan
+_locale.BE=Belçika
+_locale.BG=Bulgaristan
+_locale.CH=İsviçre
+_locale.CY=Güney Kıbrıs Rum Kesimi
+_locale.CZ=Çek Cumhuriyeti
+_locale.DE=Almanya
+_locale.EE=Estonya
+_locale.ES=İspanya
+_locale.FI=Finlandiya
+_locale.FR=Fransa
+_locale.GB=Birleşk Krallık
+_locale.GE=Gürcistan
+_locale.GR=Yunanistan
+_locale.HR=Hırvatistan
+_locale.HU=Macaristan
+_locale.IE=İrlanda
+_locale.IS=İzlanda
+_locale.IT.florence=İtalya-Floransa
+_locale.IT.rome=İtalya-Roma
+_locale.LI=Liechtenstein
+_locale.LT=Litvanya
+_locale.LU=Lüksemburg
+_locale.LV=Latviya
+_locale.MD=Moldıva
+_locale.MT=Malta
+_locale.NL=Hollanda
+_locale.NO=Norveç
+_locale.PL=Polonya
+_locale.PT=Portekiz
+_locale.RO=Romanya
+_locale.RS=Sirbistan
+_locale.RU.moscow=Rusya-Moskova
+_locale.RU.st.petersburg=Rusya-Saint Petersburg
+_locale.SE=İsveç
+_locale.SK=Slovakya
+_locale.TR=Türkiye
+_locale.UA=Ukrayna
+_locale.cs=Çekçe
+_locale.da=Danimarka
+_locale.danish=Danca
+_locale.de=Almanca
+_locale.el=Yunanca
+_locale.en=İngilizce
+_locale.es=İspanyolca
+_locale.et=Estonyaca
+_locale.fi=Fince
+_locale.fr=Fransızca
+_locale.hr=Hırvatça
+_locale.hu=Macarca
+_locale.is=İzlandaca
+_locale.lb=Lüksemburgca
+_locale.lt=Litvanyaca
+_locale.lv=Lotonyaca
+_locale.mt=Maltaca
+_locale.nl=Hollandaca
+_locale.norwegian=Nrveçce
+_locale.pl=Lehçe
+_locale.pt=Portekizce
+_locale.ro=Romanca
+_locale.ru=Rusça
+_locale.sk=Slovakça
+_locale.sl=Slovenyaca
+_locale.sr=Sırpça
+_locale.sv=İsveçce
 _metadata.dc.contributor=Katılımcı
 _metadata.dc.coverage=kapsama
 _metadata.dc.creator=Yazar
@@ -205,72 +273,4 @@ _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
 languageDropDownList_t=Dil
-locale.albania=Arnavutluk
-locale.armenia=Ermenistan
-locale.austria=Avusturya
-locale.azerbaijan=Azerbeycan
-locale.belgium=Belçika
-locale.bulgaria=Bulgaristan
-locale.croatia=Hırvatistan
-locale.croatian=Hırvatça
-locale.cyprus=Güney Kıbrıs Rum Kesimi
-locale.czech=Çek Cumhuriyeti
-locale.czechlanguage=Çekçe
-locale.danish=Danca
-locale.denmark=Danimarka
-locale.dutch=Hollandaca
-locale.english=İngilizce
-locale.estonia=Estonya
-locale.estonian=Estonyaca
-locale.finland=Finlandiya
-locale.finnish=Fince
-locale.france=Fransa
-locale.french=Fransızca
-locale.georgia=Gürcistan
-locale.german=Almanca
-locale.germany=Almanya
-locale.greece=Yunanistan
-locale.greek=Yunanca
-locale.hungarian=Macarca
-locale.hungary=Macaristan
-locale.iceland=İzlanda
-locale.icelandic=İzlandaca
-locale.ireland=İrlanda
-locale.italy.florence=İtalya-Floransa
-locale.italy.rome=İtalya-Roma
-locale.latvia=Latviya
-locale.latvian=Lotonyaca
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Litvanya
-locale.lithuanian=Litvanyaca
-locale.luxembourg=Lüksemburg
-locale.luxemburgish=Lüksemburgca
-locale.malta=Malta
-locale.maltese=Maltaca
-locale.moldova=Moldıva
-locale.netherlands=Hollanda
-locale.norway=Norveç
-locale.norwegian=Nrveçce
-locale.poland=Polonya
-locale.polish=Lehçe
-locale.portugal=Portekiz
-locale.portuguese=Portekizce
-locale.romania=Romanya
-locale.romanian=Romanca
-locale.russia.moscow=Rusya-Moskova
-locale.russia.st.petersburg=Rusya-Saint Petersburg
-locale.russian=Rusça
-locale.serbia=Sirbistan
-locale.serbian=Sırpça
-locale.slovak=Slovakça
-locale.slovakia=Slovakya
-locale.slovenian=Slovenyaca
-locale.spain=İspanya
-locale.spanish=İspanyolca
-locale.sweden=İsveç
-locale.swedish=İsveçce
-locale.switzerland=İsviçre
-locale.turkey=Türkiye
-locale.uk=Birleşk Krallık
-locale.ukraine=Ukrayna
 registrationSucceed_t=Başarıyla kayıt oldunuz
