--- a/portal/src/main/resources/i18n/messages_uk.properties
+++ b/portal/src/main/resources/i18n/messages_uk.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=Італійська (ita)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Австрія
+_locale.AZ=Azerbaijan
+_locale.BE=Бельгія
+_locale.BG=Болгарія
+_locale.CH=Швейцарія
+_locale.CY=Кіпр
+_locale.CZ=Чеська Республіка
+_locale.DE=Германія
+_locale.EE=Естонія
+_locale.ES=Іспанія
+_locale.FI=Фінляндія
+_locale.FR=Франція
+_locale.GB=Великобританія
+_locale.GE=Georgia
+_locale.GR=Греція
+_locale.HR=Хорватія
+_locale.HU=Угорщина
+_locale.IE=Ірландія
+_locale.IS=Ісландія
+_locale.IT.florence=Італія-Флоренція
+_locale.IT.rome=Італія-Рим
+_locale.LI=Ліхтенштейн
+_locale.LT=Литва
+_locale.LU=Люксембург
+_locale.LV=Латвія
+_locale.MD=Moldova
+_locale.MT=Мальта
+_locale.NL=Нідерланди
+_locale.NO=Норвегія
+_locale.PL=Польща
+_locale.PT=Португалія
+_locale.RO=Румунія
+_locale.RS=Сербія
+_locale.RU.moscow=Росія - Москва
+_locale.RU.st.petersburg=Russia - Saint Petersburg
+_locale.SE=Швеція
+_locale.SK=Словакія
+_locale.TR=Turkey
+_locale.UA=Ukraine
+_locale.cs=Чеська (cze/cse)
+_locale.da=Данія
+_locale.danish=Датська (dan)
+_locale.de=Німецька (deu)
+_locale.el=Грецька (ell/gre)
+_locale.en=Англійська(eng)
+_locale.es=Іспанська (esp)
+_locale.et=Естонська (est)
+_locale.fi=Фінська (fin)
+_locale.fr=Французька (fre)
+_locale.hr=Хорватська(hrv)
+_locale.hu=Угорська (hun)
+_locale.is=Ісландська (ice)
+_locale.lb=Люксембурзька (ltz)
+_locale.lt=Литовська (lit)
+_locale.lv=Латвійська (lav)
+_locale.mt=Мальтійська (mlt)
+_locale.nl=Голландська (dut)
+_locale.norwegian=Норвезька (nor)
+_locale.pl=Польська (pol)
+_locale.pt=Португальська (por)
+_locale.ro=Румунська (rom)
+_locale.ru=Російська(rus)
+_locale.sk=Словацька (slo)
+_locale.sl=Словенська (slv)
+_locale.sr=Сербська (scc)
+_locale.sv=Шведська (sve/swe)
 _metadata.dc.contributor=Спонсор
 _metadata.dc.coverage=Границі
 _metadata.dc.creator=Автор
@@ -205,72 +273,4 @@ _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
 languageDropDownList_t=Мова
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Австрія
-locale.azerbaijan=Azerbaijan
-locale.belgium=Бельгія
-locale.bulgaria=Болгарія
-locale.croatia=Хорватія
-locale.croatian=Хорватська(hrv)
-locale.cyprus=Кіпр
-locale.czech=Чеська Республіка
-locale.czechlanguage=Чеська (cze/cse)
-locale.danish=Датська (dan)
-locale.denmark=Данія
-locale.dutch=Голландська (dut)
-locale.english=Англійська(eng)
-locale.estonia=Естонія
-locale.estonian=Естонська (est)
-locale.finland=Фінляндія
-locale.finnish=Фінська (fin)
-locale.france=Франція
-locale.french=Французька (fre)
-locale.georgia=Georgia
-locale.german=Німецька (deu)
-locale.germany=Германія
-locale.greece=Греція
-locale.greek=Грецька (ell/gre)
-locale.hungarian=Угорська (hun)
-locale.hungary=Угорщина
-locale.iceland=Ісландія
-locale.icelandic=Ісландська (ice)
-locale.ireland=Ірландія
-locale.italy.florence=Італія-Флоренція
-locale.italy.rome=Італія-Рим
-locale.latvia=Латвія
-locale.latvian=Латвійська (lav)
-locale.liechtenstein=Ліхтенштейн
-locale.lithuania=Литва
-locale.lithuanian=Литовська (lit)
-locale.luxembourg=Люксембург
-locale.luxemburgish=Люксембурзька (ltz)
-locale.malta=Мальта
-locale.maltese=Мальтійська (mlt)
-locale.moldova=Moldova
-locale.netherlands=Нідерланди
-locale.norway=Норвегія
-locale.norwegian=Норвезька (nor)
-locale.poland=Польща
-locale.polish=Польська (pol)
-locale.portugal=Португалія
-locale.portuguese=Португальська (por)
-locale.romania=Румунія
-locale.romanian=Румунська (rom)
-locale.russia.moscow=Росія - Москва
-locale.russia.st.petersburg=Russia - Saint Petersburg
-locale.russian=Російська(rus)
-locale.serbia=Сербія
-locale.serbian=Сербська (scc)
-locale.slovak=Словацька (slo)
-locale.slovakia=Словакія
-locale.slovenian=Словенська (slv)
-locale.spain=Іспанія
-locale.spanish=Іспанська (esp)
-locale.sweden=Швеція
-locale.swedish=Шведська (sve/swe)
-locale.switzerland=Швейцарія
-locale.turkey=Turkey
-locale.uk=Великобританія
-locale.ukraine=Ukraine
 registrationSucceed_t=Ви успішно зареєстровані
