--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -118,6 +118,74 @@ _failure.search.saved=XXXXXX
 _header.actions=XXXXXX
 _header.relatedcontent=XXXXXX
 _language_select.italian=XXXXXX
+_locale.AL=XXXXXX
+_locale.AM=XXXXXX
+_locale.AT=XXXXXX
+_locale.AZ=XXXXXX
+_locale.BE=XXXXXX
+_locale.BG=XXXXXX
+_locale.CH=XXXXXX
+_locale.CY=XXXXXX
+_locale.CZ=XXXXXX
+_locale.DE=XXXXXX
+_locale.EE=XXXXXX
+_locale.ES=XXXXXX
+_locale.FI=XXXXXX
+_locale.FR=XXXXXX
+_locale.GB=XXXXXX
+_locale.GE=XXXXXX
+_locale.GR=XXXXXX
+_locale.HR=XXXXXX
+_locale.HU=XXXXXX
+_locale.IE=XXXXXX
+_locale.IS=XXXXXX
+_locale.IT.florence=XXXXXX
+_locale.IT.rome=XXXXXX
+_locale.LI=XXXXXX
+_locale.LT=XXXXXX
+_locale.LU=XXXXXX
+_locale.LV=XXXXXX
+_locale.MD=XXXXXX
+_locale.MT=XXXXXX
+_locale.NL=XXXXXX
+_locale.NO=XXXXXX
+_locale.PL=XXXXXX
+_locale.PT=XXXXXX
+_locale.RO=XXXXXX
+_locale.RS=XXXXXX
+_locale.RU.moscow=XXXXXX
+_locale.RU.st.petersburg=XXXXXX
+_locale.SE=XXXXXX
+_locale.SK=XXXXXX
+_locale.TR=XXXXXX
+_locale.UA=XXXXXX
+_locale.cs=XXXXXX
+_locale.da=XXXXXX
+_locale.danish=XXXXXX
+_locale.de=XXXXXX
+_locale.el=XXXXXX
+_locale.en=XXXXXX
+_locale.es=XXXXXX
+_locale.et=XXXXXX
+_locale.fi=XXXXXX
+_locale.fr=XXXXXX
+_locale.hr=XXXXXX
+_locale.hu=XXXXXX
+_locale.is=XXXXXX
+_locale.lb=XXXXXX
+_locale.lt=XXXXXX
+_locale.lv=XXXXXX
+_locale.mt=XXXXXX
+_locale.nl=XXXXXX
+_locale.norwegian=XXXXXX
+_locale.pl=XXXXXX
+_locale.pt=XXXXXX
+_locale.ro=XXXXXX
+_locale.ru=XXXXXX
+_locale.sk=XXXXXX
+_locale.sl=XXXXXX
+_locale.sr=XXXXXX
+_locale.sv=XXXXXX
 _metadata.dc.contributor=XXXXXX
 _metadata.dc.coverage=XXXXXX
 _metadata.dc.creator=XXXXXX
@@ -205,72 +273,4 @@ _unused.view.with.labels=XXXXXX
 _unused.view.without.labels=XXXXXX
 _unused.you.have.search.for=XXXXXX
 languageDropDownList_t=XXXXXX
-locale.albania=XXXXXX
-locale.armenia=XXXXXX
-locale.austria=XXXXXX
-locale.azerbaijan=XXXXXX
-locale.belgium=XXXXXX
-locale.bulgaria=XXXXXX
-locale.croatia=XXXXXX
-locale.croatian=XXXXXX
-locale.cyprus=XXXXXX
-locale.czech=XXXXXX
-locale.czechlanguage=XXXXXX
-locale.danish=XXXXXX
-locale.denmark=XXXXXX
-locale.dutch=XXXXXX
-locale.english=XXXXXX
-locale.estonia=XXXXXX
-locale.estonian=XXXXXX
-locale.finland=XXXXXX
-locale.finnish=XXXXXX
-locale.france=XXXXXX
-locale.french=XXXXXX
-locale.georgia=XXXXXX
-locale.german=XXXXXX
-locale.germany=XXXXXX
-locale.greece=XXXXXX
-locale.greek=XXXXXX
-locale.hungarian=XXXXXX
-locale.hungary=XXXXXX
-locale.iceland=XXXXXX
-locale.icelandic=XXXXXX
-locale.ireland=XXXXXX
-locale.italy.florence=XXXXXX
-locale.italy.rome=XXXXXX
-locale.latvia=XXXXXX
-locale.latvian=XXXXXX
-locale.liechtenstein=XXXXXX
-locale.lithuania=XXXXXX
-locale.lithuanian=XXXXXX
-locale.luxembourg=XXXXXX
-locale.luxemburgish=XXXXXX
-locale.malta=XXXXXX
-locale.maltese=XXXXXX
-locale.moldova=XXXXXX
-locale.netherlands=XXXXXX
-locale.norway=XXXXXX
-locale.norwegian=XXXXXX
-locale.poland=XXXXXX
-locale.polish=XXXXXX
-locale.portugal=XXXXXX
-locale.portuguese=XXXXXX
-locale.romania=XXXXXX
-locale.romanian=XXXXXX
-locale.russia.moscow=XXXXXX
-locale.russia.st.petersburg=XXXXXX
-locale.russian=XXXXXX
-locale.serbia=XXXXXX
-locale.serbian=XXXXXX
-locale.slovak=XXXXXX
-locale.slovakia=XXXXXX
-locale.slovenian=XXXXXX
-locale.spain=XXXXXX
-locale.spanish=XXXXXX
-locale.sweden=XXXXXX
-locale.swedish=XXXXXX
-locale.switzerland=XXXXXX
-locale.turkey=XXXXXX
-locale.uk=XXXXXX
-locale.ukraine=XXXXXX
 registrationSucceed_t=XXXXXX
