--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Gem søgning mislykkedes
 _header.actions=Handlinger
 _header.relatedcontent=Lignende indhold
 _language_select.italian=Italiensk
+_locale.AL=Albanien
+_locale.AM=Armenien
+_locale.AT=Østrig
+_locale.AZ=Azerbaijan
+_locale.BE=Belgien
+_locale.BG=Bulgarien
+_locale.CH=Schweiz
+_locale.CY=Cypern
+_locale.CZ=Den Tjekkiske Republik
+_locale.DE=Tyskland
+_locale.EE=Estland
+_locale.ES=Spanien
+_locale.FI=Finland
+_locale.FR=Frankrig
+_locale.GB=Storbrittanien
+_locale.GE=Georgien
+_locale.GR=Grækenland
+_locale.HR=Kroatien
+_locale.HU=Ungarn
+_locale.IE=Irland
+_locale.IS=Island
+_locale.IT.florence=Italien-Firenze
+_locale.IT.rome=Italien-Rom
+_locale.LI=Liechtenstein
+_locale.LT=Litauen
+_locale.LU=Luxembourg
+_locale.LV=Letland
+_locale.MD=Moldovien
+_locale.MT=Malta
+_locale.NL=Holland
+_locale.NO=Norge
+_locale.PL=Polen
+_locale.PT=Portugal
+_locale.RO=Rumænien
+_locale.RS=Serbien
+_locale.RU.moscow=Rusland - Moskva
+_locale.RU.st.petersburg=Rusland - Sankt Petersborg
+_locale.SE=Sverige
+_locale.SK=Den Slovakiske Republik
+_locale.TR=Tyrkiet
+_locale.UA=Ukraine
+_locale.cs=Tjekkisk
+_locale.da=Danmark
+_locale.danish=Dansk
+_locale.de=Tysk
+_locale.el=Græsk
+_locale.en=Engelsk
+_locale.es=Spansk
+_locale.et=Estisk
+_locale.fi=Finsk
+_locale.fr=Fransk
+_locale.hr=Kroatisk
+_locale.hu=Ungarsk
+_locale.is=Islandsk
+_locale.lb=Luxembourgsk
+_locale.lt=Litauisk
+_locale.lv=Lettisk
+_locale.mt=Maltesisk
+_locale.nl=Hollandsk
+_locale.norwegian=Norsk
+_locale.pl=Polsk
+_locale.pt=Portugisisk
+_locale.ro=Rumænsk
+_locale.ru=Russisk
+_locale.sk=Slovakisk
+_locale.sl=Slovensk
+_locale.sr=Serbisk
+_locale.sv=Svensk
 _metadata.dc.contributor=Bidragsyder
 _metadata.dc.coverage=Dækker
 _metadata.dc.creator=Forfatter
@@ -205,72 +273,4 @@ _unused.view.with.labels=Vis med feltnavne
 _unused.view.without.labels=Vis uden feltnavne
 _unused.you.have.search.for=Du søgte efter
 languageDropDownList_t=Sprog
-locale.albania=Albanien
-locale.armenia=Armenien
-locale.austria=Østrig
-locale.azerbaijan=Azerbaijan
-locale.belgium=Belgien
-locale.bulgaria=Bulgarien
-locale.croatia=Kroatien
-locale.croatian=Kroatisk
-locale.cyprus=Cypern
-locale.czech=Den Tjekkiske Republik
-locale.czechlanguage=Tjekkisk
-locale.danish=Dansk
-locale.denmark=Danmark
-locale.dutch=Hollandsk
-locale.english=Engelsk
-locale.estonia=Estland
-locale.estonian=Estisk
-locale.finland=Finland
-locale.finnish=Finsk
-locale.france=Frankrig
-locale.french=Fransk
-locale.georgia=Georgien
-locale.german=Tysk
-locale.germany=Tyskland
-locale.greece=Grækenland
-locale.greek=Græsk
-locale.hungarian=Ungarsk
-locale.hungary=Ungarn
-locale.iceland=Island
-locale.icelandic=Islandsk
-locale.ireland=Irland
-locale.italy.florence=Italien-Firenze
-locale.italy.rome=Italien-Rom
-locale.latvia=Letland
-locale.latvian=Lettisk
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Litauen
-locale.lithuanian=Litauisk
-locale.luxembourg=Luxembourg
-locale.luxemburgish=Luxembourgsk
-locale.malta=Malta
-locale.maltese=Maltesisk
-locale.moldova=Moldovien
-locale.netherlands=Holland
-locale.norway=Norge
-locale.norwegian=Norsk
-locale.poland=Polen
-locale.polish=Polsk
-locale.portugal=Portugal
-locale.portuguese=Portugisisk
-locale.romania=Rumænien
-locale.romanian=Rumænsk
-locale.russia.moscow=Rusland - Moskva
-locale.russia.st.petersburg=Rusland - Sankt Petersborg
-locale.russian=Russisk
-locale.serbia=Serbien
-locale.serbian=Serbisk
-locale.slovak=Slovakisk
-locale.slovakia=Den Slovakiske Republik
-locale.slovenian=Slovensk
-locale.spain=Spanien
-locale.spanish=Spansk
-locale.sweden=Sverige
-locale.swedish=Svensk
-locale.switzerland=Schweiz
-locale.turkey=Tyrkiet
-locale.uk=Storbrittanien
-locale.ukraine=Ukraine
 registrationSucceed_t=Du er nu registreret
