--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=Italian (ita)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Austria
+_locale.AZ=Azerbaijan
+_locale.BE=Belgium
+_locale.BG=Bulgaria
+_locale.CH=Switzerland
+_locale.CY=Cyprus
+_locale.CZ=Czech Republic
+_locale.DE=Germany
+_locale.EE=Estonia
+_locale.ES=Spain
+_locale.FI=Finland
+_locale.FR=France
+_locale.GB=United Kingdom
+_locale.GE=Georgia
+_locale.GR=Greece
+_locale.HR=Croatia
+_locale.HU=Hungary
+_locale.IE=Ireland
+_locale.IS=Iceland
+_locale.IT.florence=Italy-Florence
+_locale.IT.rome=Italy-Rome
+_locale.LI=Liechtenstein
+_locale.LT=Lithuania
+_locale.LU=Luxembourg
+_locale.LV=Latvia
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Netherlands
+_locale.NO=Norway
+_locale.PL=Poland
+_locale.PT=Portugal
+_locale.RO=Romania
+_locale.RS=Serbia
+_locale.RU.moscow=Russia - Moscow
+_locale.RU.st.petersburg=Russia - Saint Petersburg
+_locale.SE=Sweden
+_locale.SK=Slovakia
+_locale.TR=Turkey
+_locale.UA=Ukraine
+_locale.cs=Czech (cze/cse)
+_locale.da=Denmark
+_locale.danish=Danish (dan)
+_locale.de=German (deu)
+_locale.el=Greek (ell/gre)
+_locale.en=English (eng)
+_locale.es=Spanish (esp)
+_locale.et=Estonian (est)
+_locale.fi=Finnish (fin)
+_locale.fr=French (fre)
+_locale.hr=Croatian (hrv)
+_locale.hu=Hungarian (hun)
+_locale.is=Icelandic (ice)
+_locale.lb=Luxemburgish (ltz)
+_locale.lt=Lithuanian (lit)
+_locale.lv=Latvian (lav)
+_locale.mt=Maltese (mlt)
+_locale.nl=Dutch (dut)
+_locale.norwegian=Norwegian (nor)
+_locale.pl=Polish (pol)
+_locale.pt=Portuguese (por)
+_locale.ro=Romanian (rom)
+_locale.ru=Russian (rus)
+_locale.sk=Slovak (slo)
+_locale.sl=Slovenian (slv)
+_locale.sr=Serbian (scc)
+_locale.sv=Swedish (sve/swe)
 _metadata.abm.contentprovider=Provider
 _metadata.abm.county=County
 _metadata.abm.data.provider=Provider
@@ -266,74 +334,6 @@ dms.version.approve.explain=By approving a version you permanently delete all th
 dms.versions=Versions
 form.submit=Submit
 languageDropDownList_t=Language
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Austria
-locale.azerbaijan=Azerbaijan
-locale.belgium=Belgium
-locale.bulgaria=Bulgaria
-locale.croatia=Croatia
-locale.croatian=Croatian (hrv)
-locale.cyprus=Cyprus
-locale.czech=Czech Republic
-locale.czechlanguage=Czech (cze/cse)
-locale.danish=Danish (dan)
-locale.denmark=Denmark
-locale.dutch=Dutch (dut)
-locale.english=English (eng)
-locale.estonia=Estonia
-locale.estonian=Estonian (est)
-locale.finland=Finland
-locale.finnish=Finnish (fin)
-locale.france=France
-locale.french=French (fre)
-locale.georgia=Georgia
-locale.german=German (deu)
-locale.germany=Germany
-locale.greece=Greece
-locale.greek=Greek (ell/gre)
-locale.hungarian=Hungarian (hun)
-locale.hungary=Hungary
-locale.iceland=Iceland
-locale.icelandic=Icelandic (ice)
-locale.ireland=Ireland
-locale.italy.florence=Italy-Florence
-locale.italy.rome=Italy-Rome
-locale.latvia=Latvia
-locale.latvian=Latvian (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Lithuania
-locale.lithuanian=Lithuanian (lit)
-locale.luxembourg=Luxembourg
-locale.luxemburgish=Luxemburgish (ltz)
-locale.malta=Malta
-locale.maltese=Maltese (mlt)
-locale.moldova=Moldova
-locale.netherlands=Netherlands
-locale.norway=Norway
-locale.norwegian=Norwegian (nor)
-locale.poland=Poland
-locale.polish=Polish (pol)
-locale.portugal=Portugal
-locale.portuguese=Portuguese (por)
-locale.romania=Romania
-locale.romanian=Romanian (rom)
-locale.russia.moscow=Russia - Moscow
-locale.russia.st.petersburg=Russia - Saint Petersburg
-locale.russian=Russian (rus)
-locale.serbia=Serbia
-locale.serbian=Serbian (scc)
-locale.slovak=Slovak (slo)
-locale.slovakia=Slovakia
-locale.slovenian=Slovenian (slv)
-locale.spain=Spain
-locale.spanish=Spanish (esp)
-locale.sweden=Sweden
-locale.swedish=Swedish (sve/swe)
-locale.switzerland=Switzerland
-locale.turkey=Turkey
-locale.uk=United Kingdom
-locale.ukraine=Ukraine
 login.required=You must login or register
 registrationSucceed_t=You have successfully registered
 search.order.by=Order by
