--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Salvarea interogării a eşuat
 _header.actions=Acţiuni
 _header.relatedcontent=Conţinut asociat
 _language_select.italian=Italiană (ita)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Austria
+_locale.AZ=Azerbagian
+_locale.BE=Belgia
+_locale.BG=Bulgaria
+_locale.CH=Elveţia
+_locale.CY=Cipru
+_locale.CZ=Republica Cehǎ
+_locale.DE=Germania
+_locale.EE=Estonia
+_locale.ES=Spania
+_locale.FI=Finlanda
+_locale.FR=Franţa
+_locale.GB=Marea Britanie
+_locale.GE=Georgia
+_locale.GR=Grecia
+_locale.HR=Croaţia
+_locale.HU=Ungaria
+_locale.IE=Irlanda
+_locale.IS=Islanda
+_locale.IT.florence=Italia-Florenţa
+_locale.IT.rome=Italia-Roma
+_locale.LI=Liechtenstein
+_locale.LT=Lituania
+_locale.LU=Luxemburg
+_locale.LV=Letonia
+_locale.MD=Moldova
+_locale.MT=Malta
+_locale.NL=Olanda
+_locale.NO=Norvegia
+_locale.PL=Polonia
+_locale.PT=Portugalia
+_locale.RO=România
+_locale.RS=Serbia
+_locale.RU.moscow=Rusia - Moscova
+_locale.RU.st.petersburg=Rusia - Sankt Petersburg
+_locale.SE=Suedia
+_locale.SK=Slovacia
+_locale.TR=Turcia
+_locale.UA=Ucraina
+_locale.cs=Cehă (cze/cse)
+_locale.da=Danemarca
+_locale.danish=Daneză (dan)
+_locale.de=Germană (deu)
+_locale.el=Greacă (ell/gre)
+_locale.en=Engleză (eng)
+_locale.es=Spaniolă (esp)
+_locale.et=Estoniană (est)
+_locale.fi=Finlandeză (fin)
+_locale.fr=Franceză (fre)
+_locale.hr=Croată (hrv)
+_locale.hu=Maghiară (hun)
+_locale.is=Islandeză (ice)
+_locale.lb=Luxemburgheză (ltz)
+_locale.lt=Lituaniană (lit)
+_locale.lv=Letonă (lav)
+_locale.mt=Malteză (mlt)
+_locale.nl=Olandeză (dut)
+_locale.norwegian=Norvegiană (nor)
+_locale.pl=Poloneză (pol)
+_locale.pt=Portugheză (por)
+_locale.ro=Română (rom)
+_locale.ru=Rusă (rus)
+_locale.sk=Slovacă (slo)
+_locale.sl=Slovenă (slv)
+_locale.sr=Sârbă (scc)
+_locale.sv=Suedeză (sve/swe)
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Relatare
 _metadata.dc.creator=Autor
@@ -205,72 +273,4 @@ _unused.view.with.labels=Prezentare cu etichete
 _unused.view.without.labels=Prezentare fără etichete
 _unused.you.have.search.for=Aţi căutat
 languageDropDownList_t=Limba
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Austria
-locale.azerbaijan=Azerbagian
-locale.belgium=Belgia
-locale.bulgaria=Bulgaria
-locale.croatia=Croaţia
-locale.croatian=Croată (hrv)
-locale.cyprus=Cipru
-locale.czech=Republica Cehǎ
-locale.czechlanguage=Cehă (cze/cse)
-locale.danish=Daneză (dan)
-locale.denmark=Danemarca
-locale.dutch=Olandeză (dut)
-locale.english=Engleză (eng)
-locale.estonia=Estonia
-locale.estonian=Estoniană (est)
-locale.finland=Finlanda
-locale.finnish=Finlandeză (fin)
-locale.france=Franţa
-locale.french=Franceză (fre)
-locale.georgia=Georgia
-locale.german=Germană (deu)
-locale.germany=Germania
-locale.greece=Grecia
-locale.greek=Greacă (ell/gre)
-locale.hungarian=Maghiară (hun)
-locale.hungary=Ungaria
-locale.iceland=Islanda
-locale.icelandic=Islandeză (ice)
-locale.ireland=Irlanda
-locale.italy.florence=Italia-Florenţa
-locale.italy.rome=Italia-Roma
-locale.latvia=Letonia
-locale.latvian=Letonă (lav)
-locale.liechtenstein=Liechtenstein
-locale.lithuania=Lituania
-locale.lithuanian=Lituaniană (lit)
-locale.luxembourg=Luxemburg
-locale.luxemburgish=Luxemburgheză (ltz)
-locale.malta=Malta
-locale.maltese=Malteză (mlt)
-locale.moldova=Moldova
-locale.netherlands=Olanda
-locale.norway=Norvegia
-locale.norwegian=Norvegiană (nor)
-locale.poland=Polonia
-locale.polish=Poloneză (pol)
-locale.portugal=Portugalia
-locale.portuguese=Portugheză (por)
-locale.romania=România
-locale.romanian=Română (rom)
-locale.russia.moscow=Rusia - Moscova
-locale.russia.st.petersburg=Rusia - Sankt Petersburg
-locale.russian=Rusă (rus)
-locale.serbia=Serbia
-locale.serbian=Sârbă (scc)
-locale.slovak=Slovacă (slo)
-locale.slovakia=Slovacia
-locale.slovenian=Slovenă (slv)
-locale.spain=Spania
-locale.spanish=Spaniolă (esp)
-locale.sweden=Suedia
-locale.swedish=Suedeză (sve/swe)
-locale.switzerland=Elveţia
-locale.turkey=Turcia
-locale.uk=Marea Britanie
-locale.ukraine=Ucraina
 registrationSucceed_t=V-aţi înregistrat cu succes
