--- a/portal/src/main/resources/i18n/messages_ru.properties
+++ b/portal/src/main/resources/i18n/messages_ru.properties
@@ -118,6 +118,74 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=Итальянский (ит.)
+_locale.AL=Albania
+_locale.AM=Armenia
+_locale.AT=Австрия
+_locale.AZ=Azerbaijan
+_locale.BE=Бельгия
+_locale.BG=Болгария
+_locale.CH=Швейцария
+_locale.CY=Кипр
+_locale.CZ=Чешская республика
+_locale.DE=Германия
+_locale.EE=Эстония
+_locale.ES=Испания
+_locale.FI=Финляндия
+_locale.FR=Франция
+_locale.GB=Великобритания
+_locale.GE=Georgia
+_locale.GR=Греция
+_locale.HR=Хорватия
+_locale.HU=Венгрия
+_locale.IE=Ирландия
+_locale.IS=Исландия
+_locale.IT.florence=Италия-Флоренция
+_locale.IT.rome=Италия-Рим
+_locale.LI=Лихтенштейн
+_locale.LT=Литва
+_locale.LU=Люксембург
+_locale.LV=Латвия
+_locale.MD=Moldova
+_locale.MT=Мальта
+_locale.NL=Нидерланды
+_locale.NO=Норвегия
+_locale.PL=Польша
+_locale.PT=Португалия
+_locale.RO=Румыния
+_locale.RS=Сербия
+_locale.RU.moscow=Россия - Москва
+_locale.RU.st.petersburg=Russia - Saint Petersburg
+_locale.SE=Швеция
+_locale.SK=Словакия
+_locale.TR=Turkey
+_locale.UA=Ukraine
+_locale.cs=Чешский (чешск.)
+_locale.da=Дания
+_locale.danish=Датский (дат.)
+_locale.de=Немецкий (нем.)
+_locale.el=Греческий (греч.)
+_locale.en=Английский (англ.)
+_locale.es=Испанский (исп.)
+_locale.et=Эстонский (эст.)
+_locale.fi=Финский (фин.)
+_locale.fr=Французский (франц.)
+_locale.hr=Хорватский (хорв.)
+_locale.hu=Венгерский (венгр.)
+_locale.is=Исландский (исл.)
+_locale.lb=Люксембургский (люкс.)
+_locale.lt=Литовский (лит.)
+_locale.lv=Латвийский (латв.)
+_locale.mt=Мальтийский (мальт.)
+_locale.nl=Нидерландский (нид.)
+_locale.norwegian=Норвежский (норв.)
+_locale.pl=Польский (полск.)
+_locale.pt=португальский (порт.)
+_locale.ro=Румынский
+_locale.ru=Русский
+_locale.sk=Словацкий (словц.)
+_locale.sl=Словенский (словен.)
+_locale.sr=Сербский (сербск.)
+_locale.sv=Шведский (швед.)
 _metadata.dc.contributor=Спонсор
 _metadata.dc.coverage=Границы
 _metadata.dc.creator=Автор
@@ -205,72 +273,4 @@ _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
 languageDropDownList_t=Язык
-locale.albania=Albania
-locale.armenia=Armenia
-locale.austria=Австрия
-locale.azerbaijan=Azerbaijan
-locale.belgium=Бельгия
-locale.bulgaria=Болгария
-locale.croatia=Хорватия
-locale.croatian=Хорватский (хорв.)
-locale.cyprus=Кипр
-locale.czech=Чешская республика
-locale.czechlanguage=Чешский (чешск.)
-locale.danish=Датский (дат.)
-locale.denmark=Дания
-locale.dutch=Нидерландский (нид.)
-locale.english=Английский (англ.)
-locale.estonia=Эстония
-locale.estonian=Эстонский (эст.)
-locale.finland=Финляндия
-locale.finnish=Финский (фин.)
-locale.france=Франция
-locale.french=Французский (франц.)
-locale.georgia=Georgia
-locale.german=Немецкий (нем.)
-locale.germany=Германия
-locale.greece=Греция
-locale.greek=Греческий (греч.)
-locale.hungarian=Венгерский (венгр.)
-locale.hungary=Венгрия
-locale.iceland=Исландия
-locale.icelandic=Исландский (исл.)
-locale.ireland=Ирландия
-locale.italy.florence=Италия-Флоренция
-locale.italy.rome=Италия-Рим
-locale.latvia=Латвия
-locale.latvian=Латвийский (латв.)
-locale.liechtenstein=Лихтенштейн
-locale.lithuania=Литва
-locale.lithuanian=Литовский (лит.)
-locale.luxembourg=Люксембург
-locale.luxemburgish=Люксембургский (люкс.)
-locale.malta=Мальта
-locale.maltese=Мальтийский (мальт.)
-locale.moldova=Moldova
-locale.netherlands=Нидерланды
-locale.norway=Норвегия
-locale.norwegian=Норвежский (норв.)
-locale.poland=Польша
-locale.polish=Польский (полск.)
-locale.portugal=Португалия
-locale.portuguese=португальский (порт.)
-locale.romania=Румыния
-locale.romanian=Румынский
-locale.russia.moscow=Россия - Москва
-locale.russia.st.petersburg=Russia - Saint Petersburg
-locale.russian=Русский
-locale.serbia=Сербия
-locale.serbian=Сербский (сербск.)
-locale.slovak=Словацкий (словц.)
-locale.slovakia=Словакия
-locale.slovenian=Словенский (словен.)
-locale.spain=Испания
-locale.spanish=Испанский (исп.)
-locale.sweden=Швеция
-locale.swedish=Шведский (швед.)
-locale.switzerland=Швейцария
-locale.turkey=Turkey
-locale.uk=Великобритания
-locale.ukraine=Ukraine
 registrationSucceed_t=Ваша регистрация завершилась успешно
